--- a/基本用户协议.md
+++ b/基本用户协议.md
@@ -13,4 +13,38 @@
 
 ##一般条款
 
-1. 会员、线上、线下、不得转让
+1. 账户  
+在您签署本协议，完成会员注册程序或以其他项目组允许的方式实际使用食品安全项目服务时，食品安全项目会向您提供唯一编号的食品安全项目账户（以下亦称账户）。
+您可以对账户设置会员名和密码，通过该会员名密码或与该会员名密码关联的其它用户名密码登录食品安全项目。您设置的会员名不得侵犯或涉嫌侵犯他人合法权益。如您连续一年未使用您的会员名和密码登录食品安全项目，或您设置的会员名涉嫌侵犯他人合法权益，项目组有权终止向您提供淘宝平台服务，注销您的账户。账户注销后，相应的会员名将开放给任意用户注册登记使用。
+您应对您的账户（会员名）和密码的安全，以及对通过您的账户（会员名）和密码实施的行为负责。除非有法律规定或司法裁定，且征得项目组的同意，否则，账户（会员名）和密码不得以任何方式转让、赠与或继承（与账户相关的财产权益除外）。如果发现任何人不当使用您的账户或有任何其他可能危及您的账户安全的情形时，您应当立即以有效方式通知项目组，要求项目组暂停相关服务。您理解项目组对您的请求采取行动需要合理时间，项目组对在采取行动前已经产生的后果（包括但不限于您的任何损失）不承担任何责任。
+为方便您使用食品安全项目服务及食品安全项目关联公司或其他组织的服务（以下称其他服务），您同意并授权项目组将您在注册、使用食品安全项目服务过程中提供、形成的信息传递给向您提供其他服务的食品安全项目关联公司或其他组织，或从提供其他服务的食品安全项目关联公司或其他组织获取您在注册、使用其他服务期间提供、形成的信息。
+
+1. 会员  
+在您按照注册页面提示填写信息、阅读并同意本协议并完成全部注册程序后或以其他项目组允许的方式实际使用食品安全项目服务时，您即成为食品安全项目会员（亦称会员）。  
+在注册时，您应当按照法律法规要求，或注册页面的提示准确提供，并及时更新您的资料，以使之真实、及时，完整和准确。如有合理理由怀疑您提供的资料错误、不实、过时或不完整的，项目组有权向您发出询问及/或要求改正的通知，并有权直接做出删除相应资料的处理，直至中止、终止对您提供部分或全部食品安全项目服务。项目组对此不承担任何责任，您将承担因此产生的任何直接或间接支出。
+您应当准确填写并及时更新您提供的电子邮件地址、联系电话、联系地址、邮政编码等联系方式，以便项目组或其他会员与您进行有效联系，因通过这些联系方式无法与您取得联系，导致您在使用食品安全项目服务过程中产生任何损失或增加费用的，应由您完全独自承担。
+您在使用食品安全项目服务过程中，所产生的应纳税赋，以及一切硬件、软件、服务及其它方面的费用，均由您独自承担。 
+
+1. 您在食品安全项目交易过程中与其他会员发生交易纠纷时，一旦您或其它会员任一方或双方共同提交项目组要求调处，则项目组有权根据单方判断做出调处决定，您了解并同意接受项目组的判断和调处决定。
+
+1. 您了解并同意，项目组有权应政府部门（包括司法及行政部门）的要求，向其提供您在食品安全项目填写的注册信息和交易记录等必要信息。如您涉嫌侵犯他人知识产权，则项目组亦有权在初步判断涉嫌侵权行为存在的情况下，向权利人提供您必要的身份信息。 
+
+1. 在使用食品安全项目服务过程中，您承诺遵守以下约定：  
+- 在使用食品安全项目服务过程中实施的所有行为均遵守国家法律、法规等规范性文件及食品安全项目各项规则的规定和要求，不违背社会公共利益或公共道德，不损害他人的合法权益，不违反本协议及相关规则。您如果违反前述承诺，产生任何法律后果的，您应以自己的名义独立承担所有的法律责任，并确保淘宝免于因此产生任何损失。
+- 在与其他会员交易过程中，遵守诚实信用原则，不采取不正当竞争行为，不扰乱交易的正常秩序，不从事与交易无关的行为。
+- 不发布国家禁止销售的或限制销售的商品或服务信息（除非取得合法且足够的许可），不发布涉嫌侵犯他人知识产权或其它合法权益的商品或服务信息，不发布违背社会公共利益或公共道德或项目组认为不适合在食品安全项目上销售的商品或服务信息，不发布其它涉嫌违法或违反本协议及各类规则的信息。
+- 不以虚构或歪曲事实的方式不当评价其他会员，不采取不正当方式制造或提高自身的信用度，不采取不正当方式制造或提高（降低）其他会员的信用度；
+- 不对食品安全项目中的任何数据作商业性利用，包括但不限于在未经项目组事先书面同意的情况下，以复制、传播等任何方式使用食品安全项目中展示的资料。
+- 不使用任何装置、软件或例行程序干预或试图干预食品安全项目的正常运作或正在食品安全项目上进行的任何交易、活动。您不得采取任何将导致不合理的庞大数据负载加诸食品安全项目网络设备的行动。
+
+1. 您了解并同意：
+- 项目组有权对您是否违反上述承诺做出单方认定，并根据单方认定结果适用规则予以处理或终止向您提供服务，且无须征得您的同意或提前通知予您。
+- 基于维护食品安全项目交易秩序及交易安全的需要，项目组有权在发生恶意购买等扰乱市场正常交易秩序的情形下，执行关闭相应交易订单等操作。
+- 经国家行政或司法机关的生效法律文书确认您存在违法或侵权行为，或者项目组根据自身的判断，认为您的行为涉嫌违反本协议和/或规则的条款或涉嫌违反法律法规的规定的，则项目组有权在食品安全项目中公示您的该等涉嫌违法或违约行为及项目组已对您采取的措施。
+- 对于您在食品安全项目中发布的涉嫌违法或涉嫌侵犯他人合法权利或违反本协议和/或规则的信息，项目组有权不经通知您即予以删除，且按照规则的规定进行处罚。
+- 对于您在食品安全项目中实施的行为，包括您未在食品安全项目中实施但已经对食品安全项目及其用户产生影响的行为，项目组有权单方认定您行为的性质及是否构成对本协议和/或规则的违反，并据此作出相应处罚。您应自行保存与您行为有关的全部证据，并应对无法提供充要证据而承担的不利后果。
+- 对于您涉嫌违反承诺的行为对任意第三方造成损害的，您均应当以自己的名义独立承担所有的法律责任，并应确保食品安全项目免于因此产生损失或增加费用。
+- 如您涉嫌违反有关法律或者本协议之规定，使食品安全项目遭受任何损失，或受到任何第三方的索赔，或受到任何行政管理部门的处罚，您应当赔偿食品安全项目因此造成的损失及（或）发生的费用，包括合理的律师费用。
+
+会员、线上、线下
+1. 本项目的账号、密码是参与信任链的凭证。信任是基于个人的，因此不能转让、继承。
