--- a/基本用户协议.md
+++ b/基本用户协议.md
@@ -30,21 +30,23 @@
 1. 您了解并同意，项目组有权应政府部门（包括司法及行政部门）的要求，向其提供您在食品安全项目填写的注册信息和交易记录等必要信息。如您涉嫌侵犯他人知识产权，则项目组亦有权在初步判断涉嫌侵权行为存在的情况下，向权利人提供您必要的身份信息。 
 
 1. 在使用食品安全项目服务过程中，您承诺遵守以下约定：  
-- 在使用食品安全项目服务过程中实施的所有行为均遵守国家法律、法规等规范性文件及食品安全项目各项规则的规定和要求，不违背社会公共利益或公共道德，不损害他人的合法权益，不违反本协议及相关规则。您如果违反前述承诺，产生任何法律后果的，您应以自己的名义独立承担所有的法律责任，并确保淘宝免于因此产生任何损失。
-- 在与其他会员交易过程中，遵守诚实信用原则，不采取不正当竞争行为，不扰乱交易的正常秩序，不从事与交易无关的行为。
-- 不发布国家禁止销售的或限制销售的商品或服务信息（除非取得合法且足够的许可），不发布涉嫌侵犯他人知识产权或其它合法权益的商品或服务信息，不发布违背社会公共利益或公共道德或项目组认为不适合在食品安全项目上销售的商品或服务信息，不发布其它涉嫌违法或违反本协议及各类规则的信息。
-- 不以虚构或歪曲事实的方式不当评价其他会员，不采取不正当方式制造或提高自身的信用度，不采取不正当方式制造或提高（降低）其他会员的信用度；
-- 不对食品安全项目中的任何数据作商业性利用，包括但不限于在未经项目组事先书面同意的情况下，以复制、传播等任何方式使用食品安全项目中展示的资料。
-- 不使用任何装置、软件或例行程序干预或试图干预食品安全项目的正常运作或正在食品安全项目上进行的任何交易、活动。您不得采取任何将导致不合理的庞大数据负载加诸食品安全项目网络设备的行动。
+	1. 在使用食品安全项目服务过程中实施的所有行为均遵守国家法律、法规等规范性文件及食品安全项目各项规则的规定和要求，不违背社会公共利益或公共道德，不损害他人的合法权益，不违反本协议及相关规则。您如果违反前述承诺，产生任何法律后果的，您应以自己的名义独立承担所有的法律责任，并确保淘宝免于因此产生任何损失。
+	1. 在与其他会员交易过程中，遵守诚实信用原则，不采取不正当竞争行为，不扰乱交易的正常秩序，不从事与交易无关的行为。
+	1. 不发布国家禁止销售的或限制销售的商品或服务信息（除非取得合法且足够的许可），不发布涉嫌侵犯他人知识产权或其它合法权益的商品或服务信息，不发布违背社会公共利益或公共道德或项目组认为不适合在食品安全项目上销售的商品或服务信息，不发布其它涉嫌违法或违反本协议及各类规则的信息。
+	1. 不以虚构或歪曲事实的方式不当评价其他会员，不采取不正当方式制造或提高自身的信用度，不采取不正当方式制造或提高（降低）其他会员的信用度；
+	1. 不对食品安全项目中的任何数据作商业性利用，包括但不限于在未经项目组事先书面同意的情况下，以复制、传播等任何方式使用食品安全项目中展示的资料。
+	1. 不使用任何装置、软件或例行程序干预或试图干预食品安全项目的正常运作或正在食品安全项目上进行的任何交易、活动。您不得采取任何将导致不合理的庞大数据负载加诸食品安全项目网络设备的行动。
 
 1. 您了解并同意：
-- 项目组有权对您是否违反上述承诺做出单方认定，并根据单方认定结果适用规则予以处理或终止向您提供服务，且无须征得您的同意或提前通知予您。
-- 基于维护食品安全项目交易秩序及交易安全的需要，项目组有权在发生恶意购买等扰乱市场正常交易秩序的情形下，执行关闭相应交易订单等操作。
-- 经国家行政或司法机关的生效法律文书确认您存在违法或侵权行为，或者项目组根据自身的判断，认为您的行为涉嫌违反本协议和/或规则的条款或涉嫌违反法律法规的规定的，则项目组有权在食品安全项目中公示您的该等涉嫌违法或违约行为及项目组已对您采取的措施。
-- 对于您在食品安全项目中发布的涉嫌违法或涉嫌侵犯他人合法权利或违反本协议和/或规则的信息，项目组有权不经通知您即予以删除，且按照规则的规定进行处罚。
-- 对于您在食品安全项目中实施的行为，包括您未在食品安全项目中实施但已经对食品安全项目及其用户产生影响的行为，项目组有权单方认定您行为的性质及是否构成对本协议和/或规则的违反，并据此作出相应处罚。您应自行保存与您行为有关的全部证据，并应对无法提供充要证据而承担的不利后果。
-- 对于您涉嫌违反承诺的行为对任意第三方造成损害的，您均应当以自己的名义独立承担所有的法律责任，并应确保食品安全项目免于因此产生损失或增加费用。
-- 如您涉嫌违反有关法律或者本协议之规定，使食品安全项目遭受任何损失，或受到任何第三方的索赔，或受到任何行政管理部门的处罚，您应当赔偿食品安全项目因此造成的损失及（或）发生的费用，包括合理的律师费用。
+	1. 项目组有权对您是否违反上述承诺做出单方认定，并根据单方认定结果适用规则予以处理或终止向您提供服务，且无须征得您的同意或提前通知予您。
+	1. 基于维护食品安全项目交易秩序及交易安全的需要，项目组有权在发生恶意购买等扰乱市场正常交易秩序的情形下，执行关闭相应交易订单等操作。
+	1. 经国家行政或司法机关的生效法律文书确认您存在违法或侵权行为，或者项目组根据自身的判断，认为您的行为涉嫌违反本协议和/或规则的条款或涉嫌违反法律法规的规定的，则项目组有权在食品安全项目中公示您的该等涉嫌违法或违约行为及项目组已对您采取的措施。
+	1. 对于您在食品安全项目中发布的涉嫌违法或涉嫌侵犯他人合法权利或违反本协议和/或规则的信息，项目组有权不经通知您即予以删除，且按照规则的规定进行处罚。
+	1. 对于您在食品安全项目中实施的行为，包括您未在食品安全项目中实施但已经对食品安全项目及其用户产生影响的行为，项目组有权单方认定您行为的性质及是否构成对本协议和/或规则的违反，并据此作出相应处罚。您应自行保存与您行为有关的全部证据，并应对无法提供充要证据而承担的不利后果。
+	1. 对于您涉嫌违反承诺的行为对任意第三方造成损害的，您均应当以自己的名义独立承担所有的法律责任，并应确保食品安全项目免于因此产生损失或增加费用。
+	1. 如您涉嫌违反有关法律或者本协议之规定，使食品安全项目遭受任何损失，或受到任何第三方的索赔，或受到任何行政管理部门的处罚，您应当赔偿食品安全项目因此造成的损失及（或）发生的费用，包括合理的律师费用。
 
-会员、线上、线下
 1. 本项目的账号、密码是参与信任链的凭证。信任是基于个人的，因此不能转让、继承。
+
+...
+线上、线下
