--- a/基本用户协议.md
+++ b/基本用户协议.md
@@ -52,42 +52,42 @@
 1. 特别授权  
 您完全理解并不可撤销地授予宿主单位及其关联公司或单位下列权利：
 	1. 您完全理解并不可撤销地授权宿主单位或宿主单位授权的第三方或您与宿主单位一致同意的第三方，根据本协议及食品安全项目规则的规定，处理您在食品安全项目中发生的所有交易及可能产生的交易纠纷。您同意接受宿主单位或宿主单位授权的第三方或您与宿主单位一致同意的第三方的判断和调处决定。该决定将对您具有法律约束力。  
-	1.一旦您向食品安全项目及（或）其关联公司或单位，包括但不限于北京市海淀区学门智能系统科技研究中心、北京学门科技有限公司等作出任何形式的承诺，且相关公司或单位已确认您违反了该承诺，则项目组有权立即按您的承诺或协议约定的方式对您的账户采取限制措施，包括中止或终止向您提供服务，并公示相关公司或单位确认的您的违约情况。您了解并同意，项目组无须就相关确认与您核对事实，或另行征得您的同意，且项目组无须就此限制措施或公示行为向您承担任何的责任。  
-	1.一旦您违反本协议，或与食品安全项目签订的其他协议的约定，项目组有权以任何方式通知食品安全项目关联公司或单位，要求其对您的权益采取限制措施，要求关联公司或单位中止、终止对您提供部分或全部服务，且在其经营或实际控制的任何网站公示您的违约情况。  
-	1.对于您提供的资料及数据信息，您授予食品安全项目及其关联公司或单位独家的、全球通用的、永久的、免费的许可使用权利 (并有权在多个层面对该权利进行再授权)。此外，淘宝及其关联公司有权(全部或部份地) 使用、复制、修订、改写、发布、翻译、分发、执行和展示您的全部资料数据（包括但不限于注册资料、交易行为数据及全部展示于淘宝平台的各类信息）或制作其派生作品，并以现在已知或日后开发的任何形式、媒体或技术，将上述信息纳入其它作品内。 
+	1. 一旦您向食品安全项目及（或）其关联公司或单位，包括但不限于北京市海淀区学门智能系统科技研究中心、北京学门科技有限公司等作出任何形式的承诺，且相关公司或单位已确认您违反了该承诺，则项目组有权立即按您的承诺或协议约定的方式对您的账户采取限制措施，包括中止或终止向您提供服务，并公示相关公司或单位确认的您的违约情况。您了解并同意，项目组无须就相关确认与您核对事实，或另行征得您的同意，且项目组无须就此限制措施或公示行为向您承担任何的责任。  
+	1. 一旦您违反本协议，或与食品安全项目签订的其他协议的约定，项目组有权以任何方式通知食品安全项目关联公司或单位，要求其对您的权益采取限制措施，要求关联公司或单位中止、终止对您提供部分或全部服务，且在其经营或实际控制的任何网站公示您的违约情况。  
+	1. 对于您提供的资料及数据信息，您授予食品安全项目及其关联公司或单位独家的、全球通用的、永久的、免费的许可使用权利 (并有权在多个层面对该权利进行再授权)。此外，淘宝及其关联公司有权(全部或部份地) 使用、复制、修订、改写、发布、翻译、分发、执行和展示您的全部资料数据（包括但不限于注册资料、交易行为数据及全部展示于淘宝平台的各类信息）或制作其派生作品，并以现在已知或日后开发的任何形式、媒体或技术，将上述信息纳入其它作品内。 
 
 1. 责任范围和责任限制  
 	1. 项目组负责按"现状"和"可得到"的状态向您提供食品安全项目服务。但项目组对食品安全项目服务不作任何明示或暗示的保证，包括但不限于食品安全项目服务的适用性、没有错误或疏漏、持续性、准确性、可靠性、适用于某一特定用途。同时，项目组也不对食品安全项目服务所涉及的技术及信息的有效性、准确性、正确性、可靠性、质量、稳定、完整和及时性作出任何承诺和保证。
 	1. 您了解食品安全项目中的信息系用户自行发布，且可能存在风险和瑕疵。食品安全项目仅作为交易场所。食品安全项目仅作为您获取物品或服务信息、物色交易对象、就物品和/或服务的交易进行协商及开展交易的场所，但项目组无法控制交易所涉及的物品的质量、安全或合法性，商贸信息的真实性或准确性，以及交易各方履行其在贸易协议中各项义务的能力。您应自行谨慎判断确定相关物品及/或信息的真实性、合法性和有效性，并自行承担因此产生的责任与损失。
 	1. 除非法律法规明确要求，或出现以下情况，否则，项目组没有义务对所有用户的注册数据、商品（服务）信息、交易行为以及与交易有关的其它事项进行事先审查：
-	* 项目组有合理的理由认为特定会员及具体交易事项可能存在重大违法或违约情形。
-	* 项目组有合理的理由认为用户的行为涉嫌违法或不当。
+		1. 项目组有合理的理由认为特定会员及具体交易事项可能存在重大违法或违约情形。
+		1. 项目组有合理的理由认为用户的行为涉嫌违法或不当。
 	1. 宿主单位或宿主单位授权的第三方或您与宿主单位一致同意的第三方有权基于您不可撤销得授权受理您与其他会员因交易产生的争议，并有权单方判断与该争议相关的事实及应适用的规则，进而作出处理决定，包括但不限于调整相关订单的交易状态，指令支付合作方将争议货款的全部或部分支付给交易一方或双方。该处理决定对您有约束力。如您未在限期内执行处理决定的，则宿主单位有权利通过项目组（但无义务）直接使用您支付宝账户内的款项，或您向宿主单位及其关联公司交纳的保证金代为支付。您应及时补足保证金并弥补宿主单位及其关联公司的损失，否则宿主单位及其关联公司有权直接抵减您在其它合同项下的权益，并有权继续追偿。  
 	您理解并同意，宿主单位或宿主单位授权的第三方或您与宿主单位一致同意的第三方并非司法机构，仅能以普通人的身份对证据进行鉴别，宿主单位或宿主单位授权的第三方或您与宿主单位一致同意的第三方对争议的调处完全是基于您不可撤销的授权，其无法保证争议处理结果符合您的期望，也不对争议调处结论承担任何责任。如您因此遭受损失，您同意自行向受益人索偿。
 	1. 您了解并同意，项目组不对因下述任一情况而导致您的任何损害赔偿承担责任，包括但不限于利润、商誉、使用、数据等方面的损失或其它无形损失的损害赔偿 (无论项目组是否已被告知该等损害赔偿的可能性) ：
-	- 使用或未能使用食品安全项目服务。
-	- 第三方未经批准的使用您的账户或更改您的数据。
-	- 通过食品安全项目服务购买或获取任何商品、样品、数据、信息或进行交易等行为或替代行为产生的费用及损失。
-	- 您对食品安全项目服务的误解。
-	- 任何非因食品安全项目的原因而引起的与食品安全项目服务有关的其它损失。
+		1. 使用或未能使用食品安全项目服务。
+		1. 第三方未经批准的使用您的账户或更改您的数据。
+		1. 通过食品安全项目服务购买或获取任何商品、样品、数据、信息或进行交易等行为或替代行为产生的费用及损失。
+		1. 您对食品安全项目服务的误解。
+		1. 任何非因食品安全项目的原因而引起的与食品安全项目服务有关的其它损失。
 	1. 不论在何种情况下，项目组均不对由于信息网络正常的设备维护，信息网络连接故障，电脑、通讯或其他系统的故障，电力故障，罢工，劳动争议，暴乱，起义，骚乱，生产力或生产资料不足，火灾，洪水，风暴，爆炸，战争，政府行为，司法行政机关的命令或第三方的不作为而造成的不能服务或延迟服务承担责任。
 
 1. 协议终止
 	1. 您同意，项目组有权自行全权决定以任何理由不经事先通知的中止、终止向您提供部分或全部食品安全项目服务，暂时冻结或永久冻结（注销）您的账户，且无须为此向您或任何第三方承担任何责任。
 	1. 出现以下情况时，项目组有权直接以注销账户的方式终止本协议:
-	- 项目组终止向您提供服务后，您涉嫌再一次直接或间接或以他人名义注册为食品安全项目用户的；
-	- 您提供的电子邮箱不存在或无法接收电子邮件，且没有其他方式可以与您进行联系，或项目组以其它联系方式通知您更改电子邮件信息，而您在项目组通知后三个工作日内仍未更改为有效的电子邮箱的。
-	- 您注册信息中的主要内容不真实或不准确或不及时或不完整。
-	- 本协议（含规则）变更时，您明示并通知项目组不愿接受新的服务协议的；
-	- 其它项目组认为应当终止服务的情况。
+		1. 项目组终止向您提供服务后，您涉嫌再一次直接或间接或以他人名义注册为食品安全项目用户的；
+		1. 您提供的电子邮箱不存在或无法接收电子邮件，且没有其他方式可以与您进行联系，或项目组以其它联系方式通知您更改电子邮件信息，而您在项目组通知后三个工作日内仍未更改为有效的电子邮箱的。
+		1. 您注册信息中的主要内容不真实或不准确或不及时或不完整。
+		1. 本协议（含规则）变更时，您明示并通知项目组不愿接受新的服务协议的；
+		1. 其它项目组认为应当终止服务的情况。
 	1.您有权向项目组要求注销您的账户，经项目组审核同意的，项目组注销（永久冻结）您的账户，届时，您与食品安全项目基于本协议的合同关系即终止。您的账户被注销（永久冻结）后，项目组没有义务为您保留或向您披露您账户中的任何信息，也没有义务向您或第三方转发任何您未曾阅读或发送过的信息。
 	1.您同意，您与项目组的合同关系终止后，项目组仍享有下列权利：
-	- 继续保存您的注册信息及您使用食品安全项目服务期间的所有交易信息。
-	- 您在使用食品安全项目服务期间存在违法行为或违反本协议和/或规则的行为的，项目组仍可依据本协议向您主张权利。
+		1. 继续保存您的注册信息及您使用食品安全项目服务期间的所有交易信息。
+		1. 您在使用食品安全项目服务期间存在违法行为或违反本协议和/或规则的行为的，项目组仍可依据本协议向您主张权利。
 	1.项目组中止或终止向您提供食品安全项目服务后，对于您在服务中止或终止之前的交易行为依下列原则处理，您应独力处理并完全承担进行以下处理所产生的任何争议、损失或增加的任何费用，并应确保食品安全项目免于因此产生任何损失或承担任何费用：
-	- 您在服务中止或终止之前已经上传至食品安全项目的物品尚未交易的，项目组有权在中止或终止服务的同时删除此项物品的相关信息；
-	- 您在服务中止或终止之前已经与其他会员达成买卖合同，但合同尚未实际履行的，项目组有权删除该买卖合同及其交易物品的相关信息；
-	- 您在服务中止或终止之前已经与其他会员达成买卖合同且已部分履行的，项目组可以不删除该项交易，但项目组有权在中止或终止服务的同时将相关情形通知您的交易对方。
+		1. 您在服务中止或终止之前已经上传至食品安全项目的物品尚未交易的，项目组有权在中止或终止服务的同时删除此项物品的相关信息；
+		1. 您在服务中止或终止之前已经与其他会员达成买卖合同，但合同尚未实际履行的，项目组有权删除该买卖合同及其交易物品的相关信息；
+		1. 您在服务中止或终止之前已经与其他会员达成买卖合同且已部分履行的，项目组可以不删除该项交易，但项目组有权在中止或终止服务的同时将相关情形通知您的交易对方。
 
 1. 隐私权政策
 项目组将公布并不时修订隐私权政策，隐私权政策构成本协议的有效组成部分。
