--- a/基本用户协议.md
+++ b/基本用户协议.md
@@ -60,8 +60,8 @@
 	1. 项目组负责按"现状"和"可得到"的状态向您提供食品安全项目服务。但项目组对食品安全项目服务不作任何明示或暗示的保证，包括但不限于食品安全项目服务的适用性、没有错误或疏漏、持续性、准确性、可靠性、适用于某一特定用途。同时，项目组也不对食品安全项目服务所涉及的技术及信息的有效性、准确性、正确性、可靠性、质量、稳定、完整和及时性作出任何承诺和保证。
 	1. 您了解食品安全项目中的信息系用户自行发布，且可能存在风险和瑕疵。食品安全项目仅作为交易场所。食品安全项目仅作为您获取物品或服务信息、物色交易对象、就物品和/或服务的交易进行协商及开展交易的场所，但项目组无法控制交易所涉及的物品的质量、安全或合法性，商贸信息的真实性或准确性，以及交易各方履行其在贸易协议中各项义务的能力。您应自行谨慎判断确定相关物品及/或信息的真实性、合法性和有效性，并自行承担因此产生的责任与损失。
 	1. 除非法律法规明确要求，或出现以下情况，否则，项目组没有义务对所有用户的注册数据、商品（服务）信息、交易行为以及与交易有关的其它事项进行事先审查：
-		1. 项目组有合理的理由认为特定会员及具体交易事项可能存在重大违法或违约情形。
-		1. 项目组有合理的理由认为用户的行为涉嫌违法或不当。
+		* 项目组有合理的理由认为特定会员及具体交易事项可能存在重大违法或违约情形。
+		* 项目组有合理的理由认为用户的行为涉嫌违法或不当。
 	1. 宿主单位或宿主单位授权的第三方或您与宿主单位一致同意的第三方有权基于您不可撤销得授权受理您与其他会员因交易产生的争议，并有权单方判断与该争议相关的事实及应适用的规则，进而作出处理决定，包括但不限于调整相关订单的交易状态，指令支付合作方将争议货款的全部或部分支付给交易一方或双方。该处理决定对您有约束力。如您未在限期内执行处理决定的，则宿主单位有权利通过项目组（但无义务）直接使用您支付宝账户内的款项，或您向宿主单位及其关联公司交纳的保证金代为支付。您应及时补足保证金并弥补宿主单位及其关联公司的损失，否则宿主单位及其关联公司有权直接抵减您在其它合同项下的权益，并有权继续追偿。  
 	您理解并同意，宿主单位或宿主单位授权的第三方或您与宿主单位一致同意的第三方并非司法机构，仅能以普通人的身份对证据进行鉴别，宿主单位或宿主单位授权的第三方或您与宿主单位一致同意的第三方对争议的调处完全是基于您不可撤销的授权，其无法保证争议处理结果符合您的期望，也不对争议调处结论承担任何责任。如您因此遭受损失，您同意自行向受益人索偿。
 	1. 您了解并同意，项目组不对因下述任一情况而导致您的任何损害赔偿承担责任，包括但不限于利润、商誉、使用、数据等方面的损失或其它无形损失的损害赔偿 (无论项目组是否已被告知该等损害赔偿的可能性) ：
