--- a/基本用户协议.md
+++ b/基本用户协议.md
@@ -65,29 +65,29 @@
 	1. 宿主单位或宿主单位授权的第三方或您与宿主单位一致同意的第三方有权基于您不可撤销得授权受理您与其他会员因交易产生的争议，并有权单方判断与该争议相关的事实及应适用的规则，进而作出处理决定，包括但不限于调整相关订单的交易状态，指令支付合作方将争议货款的全部或部分支付给交易一方或双方。该处理决定对您有约束力。如您未在限期内执行处理决定的，则宿主单位有权利通过项目组（但无义务）直接使用您支付宝账户内的款项，或您向宿主单位及其关联公司交纳的保证金代为支付。您应及时补足保证金并弥补宿主单位及其关联公司的损失，否则宿主单位及其关联公司有权直接抵减您在其它合同项下的权益，并有权继续追偿。  
 	您理解并同意，宿主单位或宿主单位授权的第三方或您与宿主单位一致同意的第三方并非司法机构，仅能以普通人的身份对证据进行鉴别，宿主单位或宿主单位授权的第三方或您与宿主单位一致同意的第三方对争议的调处完全是基于您不可撤销的授权，其无法保证争议处理结果符合您的期望，也不对争议调处结论承担任何责任。如您因此遭受损失，您同意自行向受益人索偿。
 	1. 您了解并同意，项目组不对因下述任一情况而导致您的任何损害赔偿承担责任，包括但不限于利润、商誉、使用、数据等方面的损失或其它无形损失的损害赔偿 (无论项目组是否已被告知该等损害赔偿的可能性) ：
-		1. 使用或未能使用食品安全项目服务。
-		1. 第三方未经批准的使用您的账户或更改您的数据。
-		1. 通过食品安全项目服务购买或获取任何商品、样品、数据、信息或进行交易等行为或替代行为产生的费用及损失。
-		1. 您对食品安全项目服务的误解。
-		1. 任何非因食品安全项目的原因而引起的与食品安全项目服务有关的其它损失。
+		* 使用或未能使用食品安全项目服务。
+		* 第三方未经批准的使用您的账户或更改您的数据。
+		* 通过食品安全项目服务购买或获取任何商品、样品、数据、信息或进行交易等行为或替代行为产生的费用及损失。
+		* 您对食品安全项目服务的误解。
+		* 任何非因食品安全项目的原因而引起的与食品安全项目服务有关的其它损失。
 	1. 不论在何种情况下，项目组均不对由于信息网络正常的设备维护，信息网络连接故障，电脑、通讯或其他系统的故障，电力故障，罢工，劳动争议，暴乱，起义，骚乱，生产力或生产资料不足，火灾，洪水，风暴，爆炸，战争，政府行为，司法行政机关的命令或第三方的不作为而造成的不能服务或延迟服务承担责任。
 
 1. 协议终止
 	1. 您同意，项目组有权自行全权决定以任何理由不经事先通知的中止、终止向您提供部分或全部食品安全项目服务，暂时冻结或永久冻结（注销）您的账户，且无须为此向您或任何第三方承担任何责任。
 	1. 出现以下情况时，项目组有权直接以注销账户的方式终止本协议:
-		1. 项目组终止向您提供服务后，您涉嫌再一次直接或间接或以他人名义注册为食品安全项目用户的；
-		1. 您提供的电子邮箱不存在或无法接收电子邮件，且没有其他方式可以与您进行联系，或项目组以其它联系方式通知您更改电子邮件信息，而您在项目组通知后三个工作日内仍未更改为有效的电子邮箱的。
-		1. 您注册信息中的主要内容不真实或不准确或不及时或不完整。
-		1. 本协议（含规则）变更时，您明示并通知项目组不愿接受新的服务协议的；
-		1. 其它项目组认为应当终止服务的情况。
+		* 项目组终止向您提供服务后，您涉嫌再一次直接或间接或以他人名义注册为食品安全项目用户的；
+		* 您提供的电子邮箱不存在或无法接收电子邮件，且没有其他方式可以与您进行联系，或项目组以其它联系方式通知您更改电子邮件信息，而您在项目组通知后三个工作日内仍未更改为有效的电子邮箱的。
+		* 您注册信息中的主要内容不真实或不准确或不及时或不完整。
+		* 本协议（含规则）变更时，您明示并通知项目组不愿接受新的服务协议的；
+		* 其它项目组认为应当终止服务的情况。
 	1.您有权向项目组要求注销您的账户，经项目组审核同意的，项目组注销（永久冻结）您的账户，届时，您与食品安全项目基于本协议的合同关系即终止。您的账户被注销（永久冻结）后，项目组没有义务为您保留或向您披露您账户中的任何信息，也没有义务向您或第三方转发任何您未曾阅读或发送过的信息。
 	1.您同意，您与项目组的合同关系终止后，项目组仍享有下列权利：
-		1. 继续保存您的注册信息及您使用食品安全项目服务期间的所有交易信息。
-		1. 您在使用食品安全项目服务期间存在违法行为或违反本协议和/或规则的行为的，项目组仍可依据本协议向您主张权利。
+		* 继续保存您的注册信息及您使用食品安全项目服务期间的所有交易信息。
+		* 您在使用食品安全项目服务期间存在违法行为或违反本协议和/或规则的行为的，项目组仍可依据本协议向您主张权利。
 	1.项目组中止或终止向您提供食品安全项目服务后，对于您在服务中止或终止之前的交易行为依下列原则处理，您应独力处理并完全承担进行以下处理所产生的任何争议、损失或增加的任何费用，并应确保食品安全项目免于因此产生任何损失或承担任何费用：
-		1. 您在服务中止或终止之前已经上传至食品安全项目的物品尚未交易的，项目组有权在中止或终止服务的同时删除此项物品的相关信息；
-		1. 您在服务中止或终止之前已经与其他会员达成买卖合同，但合同尚未实际履行的，项目组有权删除该买卖合同及其交易物品的相关信息；
-		1. 您在服务中止或终止之前已经与其他会员达成买卖合同且已部分履行的，项目组可以不删除该项交易，但项目组有权在中止或终止服务的同时将相关情形通知您的交易对方。
+		* 您在服务中止或终止之前已经上传至食品安全项目的物品尚未交易的，项目组有权在中止或终止服务的同时删除此项物品的相关信息；
+		* 您在服务中止或终止之前已经与其他会员达成买卖合同，但合同尚未实际履行的，项目组有权删除该买卖合同及其交易物品的相关信息；
+		* 您在服务中止或终止之前已经与其他会员达成买卖合同且已部分履行的，项目组可以不删除该项交易，但项目组有权在中止或终止服务的同时将相关情形通知您的交易对方。
 
 1. 隐私权政策
 项目组将公布并不时修订隐私权政策，隐私权政策构成本协议的有效组成部分。
