--- a/基本用户协议.md
+++ b/基本用户协议.md
@@ -10,16 +10,16 @@
 1. 隐私信息：会员姓名、手机号码、电子邮件地址属于隐私信息。
 
 ##定义
-1. 食品安全项目（或“本项目”）：IT合作社食品安全项目
-1. 项目组：指IT合作社食品安全项目组。如非特别指出，只有经过IT合作社社员会议通过，项目经理批准，方可以项目组名义对外活动。
-1. 宿主单位：北京市海淀区学门智能系统科技研究中心
+1. 项目、本项目、食品安全项目：IT合作社食品安全项目
+1. 项目组：指项目经理直接任命的项目成员。如非特别指出，只有经过IT合作社社员会议通过，项目经理批准，项目成员方可以项目组名义进行工作。
+1. 宿主单位：正式在工商、民政注册的“北京市海淀区学门智能系统科技研究中心”。
 
 ##一般条款
 
 1. 账户  
-在您签署本协议，完成会员注册程序或以其他项目组允许的方式实际使用食品安全项目服务时，食品安全项目会向您提供唯一编号的食品安全项目账户（以下亦称账户）。
-您可以对账户设置会员名和密码，通过该会员名密码或与该会员名密码关联的其它用户名密码登录食品安全项目。您设置的会员名不得侵犯或涉嫌侵犯他人合法权益。如您连续一年未使用您的会员名和密码登录食品安全项目，或您设置的会员名涉嫌侵犯他人合法权益，项目组有权终止向您提供淘宝平台服务，注销您的账户。账户注销后，相应的会员名将开放给任意用户注册登记使用。
-您应对您的账户（会员名）和密码的安全，以及对通过您的账户（会员名）和密码实施的行为负责。除非有法律规定或司法裁定，且征得项目组的同意，否则，账户（会员名）和密码不得以任何方式转让、赠与或继承（与账户相关的财产权益除外）。如果发现任何人不当使用您的账户或有任何其他可能危及您的账户安全的情形时，您应当立即以有效方式通知项目组，要求项目组暂停相关服务。您理解项目组对您的请求采取行动需要合理时间，项目组对在采取行动前已经产生的后果（包括但不限于您的任何损失）不承担任何责任。
+在您签署本协议，完成会员注册程序或以其他项目组允许的方式实际使用食品安全项目服务时，食品安全项目会向您提供唯一编号的食品安全项目账户（以下亦称账户）。  
+您可以对账户设置会员名和密码，通过该会员名密码或与该会员名密码关联的其它用户名密码登录食品安全项目。您设置的会员名不得侵犯或涉嫌侵犯他人合法权益。如您连续一年未使用您的会员名和密码登录食品安全项目，或您设置的会员名涉嫌侵犯他人合法权益，项目组有权终止向您提供淘宝平台服务，注销您的账户。账户注销后，相应的会员名将开放给任意用户注册登记使用。  
+您应对您的账户（会员名）和密码的安全，以及对通过您的账户（会员名）和密码实施的行为负责。除非有法律规定或司法裁定，且征得项目组的同意，否则，账户（会员名）和密码不得以任何方式转让、赠与或继承（与账户相关的财产权益除外）。如果发现任何人不当使用您的账户或有任何其他可能危及您的账户安全的情形时，您应当立即以有效方式通知项目组，要求项目组暂停相关服务。您理解项目组对您的请求采取行动需要合理时间，项目组对在采取行动前已经产生的后果（包括但不限于您的任何损失）不承担任何责任。  
 为方便您使用食品安全项目服务及食品安全项目关联公司或其他组织的服务（以下称其他服务），您同意并授权项目组将您在注册、使用食品安全项目服务过程中提供、形成的信息传递给向您提供其他服务的食品安全项目关联公司或其他组织，或从提供其他服务的食品安全项目关联公司或其他组织获取您在注册、使用其他服务期间提供、形成的信息。
 
 1. 会员  
@@ -99,6 +99,3 @@
 
 
 1. 本项目的账号、密码是参与信任链的凭证。信任是基于个人的，因此不能转让、继承。
-
-...
-线上、线下
