--- a/基本用户协议.md
+++ b/基本用户协议.md
@@ -1,18 +1,27 @@
-#基本用户协议
+#基本会员协议
 
-##
 
+您使用我们的服务即表示您已同意本协议。请仔细阅读。
 
 
 ##特别条款
-1. 以下条款的修改、删除应进行会员投票，或公示12个月后生效。增加内容不受限制。
-1. 消费额的2%、物流费的4%为技术服务费。
+以下条款的修改、删除需进行会员投票，同意票超过反对票可立即生效；或公示十二个月后生效。满足以下条件之一的会员可参与投票：  
+	* 投票前六个月通过本项目购买过食品。  
+ 	* 投票前十二个月参加过本项目组织的线下活动。  
+项目组根据实际情况增加特殊条款，公示后即可生效。   
+
+1. 消费额的2%、物流费的4%为技术服务费。  
 1. 隐私信息：会员姓名、手机号码、电子邮件地址属于隐私信息。
 
 ##定义
 1. 项目、本项目、食品安全项目：IT合作社食品安全项目
 1. 项目组：指项目经理直接任命的项目成员。如非特别指出，只有经过IT合作社社员会议通过，项目经理批准，项目成员方可以项目组名义进行工作。
 1. 宿主单位：正式在工商、民政注册的“北京市海淀区学门智能系统科技研究中心”。
+1. 服务费：包括技术服务费、消费服务费、生产服务费。
+1. 技术服务费：由项目经理直接管理，用于开发、运维、规则设计的经费。
+1. 消费服务费：消费专员的工作经费。
+1. 生产服务费：生产专员的工作经费。
+
 
 ##一般条款
 
