--- a/基本用户协议.md
+++ b/基本用户协议.md
@@ -1,17 +1,7 @@
-#基本会员协议
+#基本用户协议
 
 
 您使用我们的服务即表示您已同意本协议。请仔细阅读。
-
-
-##特别条款
-以下条款的修改、删除需进行会员投票，同意票超过反对票可立即生效；或公示十二个月后生效。满足以下条件之一的会员可参与投票：  
-	* 投票前六个月通过本项目购买过食品。  
- 	* 投票前十二个月参加过本项目组织的线下活动。  
-项目组根据实际情况增加特殊条款，公示后即可生效。   
-
-1. 消费额的2%、物流费的4%为技术服务费。  
-1. 隐私信息：会员姓名、手机号码、电子邮件地址属于隐私信息。
 
 ##定义
 1. 项目、本项目、食品安全项目：IT合作社食品安全项目
@@ -23,13 +13,25 @@
 1. 生产服务费：生产专员的工作经费。
 
 
+##特别条款
+以下条款的修改、删除需进行会员投票，同意票超过反对票可立即生效；或公示十二个月后生效。满足以下条件之一的会员可参与投票：  
+	* 投票前六个月通过本项目购买过食品。  
+ 	* 投票前十二个月参加过本项目组织的线下活动。  
+项目组根据实际情况增加特殊条款，公示后即可生效。   
+
+1. 消费者购买食品时，消费额的2%、物流费的4%为技术服务费。  
+1. 隐私信息：会员姓名、手机号码、电子邮件地址属于隐私信息。
+
+
+
 ##一般条款
+项目组可根据实际情况修改、删除以下条款，公示后即可生效。
 
 1. 账户  
-在您签署本协议，完成会员注册程序或以其他项目组允许的方式实际使用食品安全项目服务时，食品安全项目会向您提供唯一编号的食品安全项目账户（以下亦称账户）。  
-您可以对账户设置会员名和密码，通过该会员名密码或与该会员名密码关联的其它用户名密码登录食品安全项目。您设置的会员名不得侵犯或涉嫌侵犯他人合法权益。如您连续一年未使用您的会员名和密码登录食品安全项目，或您设置的会员名涉嫌侵犯他人合法权益，项目组有权终止向您提供淘宝平台服务，注销您的账户。账户注销后，相应的会员名将开放给任意用户注册登记使用。  
+在您签署本协议，完成会员注册程序或以其他项目组允许的方式实际使用我们的服务时，会获得唯一编号的账户。  
+如您连续一年未使用您的会员名和密码登录食品安全项目，或您设置的会员名涉嫌侵犯他人合法权益，项目组有权终止向您提供服务，注销您的账户。账户注销后，项目组有权将会员名开放给任意用户注册登记使用。  
 您应对您的账户（会员名）和密码的安全，以及对通过您的账户（会员名）和密码实施的行为负责。除非有法律规定或司法裁定，且征得项目组的同意，否则，账户（会员名）和密码不得以任何方式转让、赠与或继承（与账户相关的财产权益除外）。如果发现任何人不当使用您的账户或有任何其他可能危及您的账户安全的情形时，您应当立即以有效方式通知项目组，要求项目组暂停相关服务。您理解项目组对您的请求采取行动需要合理时间，项目组对在采取行动前已经产生的后果（包括但不限于您的任何损失）不承担任何责任。  
-为方便您使用食品安全项目服务及食品安全项目关联公司或其他组织的服务（以下称其他服务），您同意并授权项目组将您在注册、使用食品安全项目服务过程中提供、形成的信息传递给向您提供其他服务的食品安全项目关联公司或其他组织，或从提供其他服务的食品安全项目关联公司或其他组织获取您在注册、使用其他服务期间提供、形成的信息。
+为方便您使用我们及关联公司或其他组织的服务（以下称其他服务），您同意并授权项目组将您在注册、使用服务过程中提供、形成的信息传递给向您提供服务的关联公司或其他组织，或从提供服务的关联公司或其他组织获取您在注册、使用其他服务期间提供、形成的信息。
 
 1. 会员  
 在您按照注册页面提示填写信息、阅读并同意本协议并完成全部注册程序后或以其他项目组允许的方式实际使用食品安全项目服务时，您即成为食品安全项目会员（亦称会员）。  
@@ -42,7 +44,7 @@
 1. 您了解并同意，项目组有权应政府部门（包括司法及行政部门）的要求，向其提供您在食品安全项目填写的注册信息和交易记录等必要信息。如您涉嫌侵犯他人知识产权，则项目组亦有权在初步判断涉嫌侵权行为存在的情况下，向权利人提供您必要的身份信息。 
 
 1. 在使用食品安全项目服务过程中，您承诺遵守以下约定：  
-	1. 在使用食品安全项目服务过程中实施的所有行为均遵守国家法律、法规等规范性文件及食品安全项目各项规则的规定和要求，不违背社会公共利益或公共道德，不损害他人的合法权益，不违反本协议及相关规则。您如果违反前述承诺，产生任何法律后果的，您应以自己的名义独立承担所有的法律责任，并确保淘宝免于因此产生任何损失。
+	1. 在使用食品安全项目服务过程中实施的所有行为均遵守国家法律、法规等规范性文件及食品安全项目各项规则的规定和要求，不违背社会公共利益或公共道德，不损害他人的合法权益，不违反本协议及相关规则。您如果违反前述承诺，产生任何法律后果的，您应以自己的名义独立承担所有的法律责任，并确保项目免于因此产生任何损失。
 	1. 在与其他会员交易过程中，遵守诚实信用原则，不采取不正当竞争行为，不扰乱交易的正常秩序，不从事与交易无关的行为。
 	1. 不发布国家禁止销售的或限制销售的商品或服务信息（除非取得合法且足够的许可），不发布涉嫌侵犯他人知识产权或其它合法权益的商品或服务信息，不发布违背社会公共利益或公共道德或项目组认为不适合在食品安全项目上销售的商品或服务信息，不发布其它涉嫌违法或违反本协议及各类规则的信息。
 	1. 不以虚构或歪曲事实的方式不当评价其他会员，不采取不正当方式制造或提高自身的信用度，不采取不正当方式制造或提高（降低）其他会员的信用度；
