--- a/基本用户协议.md
+++ b/基本用户协议.md
@@ -65,7 +65,7 @@
 	1. 您完全理解并不可撤销地授权宿主单位或宿主单位授权的第三方或您与宿主单位一致同意的第三方，根据本协议及食品安全项目规则的规定，处理您在食品安全项目中发生的所有交易及可能产生的交易纠纷。您同意接受宿主单位或宿主单位授权的第三方或您与宿主单位一致同意的第三方的判断和调处决定。该决定将对您具有法律约束力。  
 	1. 一旦您向食品安全项目及（或）其关联公司或单位，包括但不限于北京市海淀区学门智能系统科技研究中心、北京学门科技有限公司等作出任何形式的承诺，且相关公司或单位已确认您违反了该承诺，则项目组有权立即按您的承诺或协议约定的方式对您的账户采取限制措施，包括中止或终止向您提供服务，并公示相关公司或单位确认的您的违约情况。您了解并同意，项目组无须就相关确认与您核对事实，或另行征得您的同意，且项目组无须就此限制措施或公示行为向您承担任何的责任。  
 	1. 一旦您违反本协议，或与食品安全项目签订的其他协议的约定，项目组有权以任何方式通知食品安全项目关联公司或单位，要求其对您的权益采取限制措施，要求关联公司或单位中止、终止对您提供部分或全部服务，且在其经营或实际控制的任何网站公示您的违约情况。  
-	1. 对于您提供的资料及数据信息，您授予食品安全项目及其关联公司或单位独家的、全球通用的、永久的、免费的许可使用权利 (并有权在多个层面对该权利进行再授权)。此外，淘宝及其关联公司有权(全部或部份地) 使用、复制、修订、改写、发布、翻译、分发、执行和展示您的全部资料数据（包括但不限于注册资料、交易行为数据及全部展示于淘宝平台的各类信息）或制作其派生作品，并以现在已知或日后开发的任何形式、媒体或技术，将上述信息纳入其它作品内。 
+	1. 对于您提供的资料及数据信息，您授予食品安全项目及其关联公司或单位独家的、全球通用的、永久的、免费的许可使用权利 (并有权在多个层面对该权利进行再授权)。此外，项目及其关联公司有权(全部或部份地) 使用、复制、修订、改写、发布、翻译、分发、执行和展示您的全部资料数据（包括但不限于注册资料、交易行为数据及全部展示于项目的各类信息）或制作其派生作品，并以现在已知或日后开发的任何形式、媒体或技术，将上述信息纳入其它作品内。 
 
 1. 责任范围和责任限制  
 	1. 项目组负责按"现状"和"可得到"的状态向您提供食品安全项目服务。但项目组对食品安全项目服务不作任何明示或暗示的保证，包括但不限于食品安全项目服务的适用性、没有错误或疏漏、持续性、准确性、可靠性、适用于某一特定用途。同时，项目组也不对食品安全项目服务所涉及的技术及信息的有效性、准确性、正确性、可靠性、质量、稳定、完整和及时性作出任何承诺和保证。
