--- a/项目管理.md
+++ b/项目管理.md
@@ -14,8 +14,29 @@
 1. 规划组成员以外的分析结果，规划组成员应该做出评价。
 1. 所有分析结果和评价都可以公开查阅、交流。
 1. 规划组成员提交分析结果、做出评价，官方微博发出通告。
+2. 对行业事件的分析，要求是48小时内做出，特殊情况应说明理由。
 
 ##抑制作弊对策
 1. 规划组成员对每一种作弊模式，应提出具体对策。
 2. 对策应包括具体实施步骤，陈述完整的进度、预算、预期效果。
-3. 所有项目成员、会员可以做出评价和建议，这些评价和建议是可以公开查阅的。
+3. 对策可以公开查阅。
+3. 所有项目成员、会员可以做出评价和建议，这些评价和建议只有项目成员可以查阅。
+1. 项目经理应该周期性地组织规划组集体讨论，保持对每种作弊模式都有对策。
+
+##行业发展评估
+1. 项目经理应该周期性地组织规划组集体讨论，对上次集体讨论后模式形势分析做出行业发展评估。
+2. 行业发展评估应包括以下内容：
+	2. 危机：对行业而言最坏的发展可能性。
+	3. 愿景：对行业而言现实的、较好的发展可能性。
+	4. 发展分析：向危机和愿景发展的关键因素和时间点。
+3. 行业发展评估可以公开查阅。
+
+##工作计划的批准、实施
+1. 项目经理应定期组织项目会议（规划、开发、运维、运行组成员参与），根据抑制作弊对策和行业发展评估，批准具体工作计划。
+2. 线下工作应具体为线下工作计划，由项目运营小组，项目经理批准。
+3. 线上工作应具体为软件需求，由开发组提出，项目经理批准。
+4. 涉及服务器、网站、微博的工作，由运维组提出运维工作计划，项目经理批准。
+4. 批准后的工作计划可以公开查阅。落实到具体个人的任务及工作日志，可以在项目成员个人主页公开查阅。
+5. 项目经理对项目成员的工作日志可以做出评价，评价可以公开查阅。
+6. 任何项目成员、会员可以对项目成员的工作日志做出评价，只有项目成员可以阅读。
+
