--- a/项目管理.md
+++ b/项目管理.md
@@ -40,3 +40,31 @@
 5. 项目经理对项目成员的工作日志可以做出评价，评价可以公开查阅。
 6. 任何项目成员、会员可以对项目成员的工作日志做出评价，只有项目成员可以阅读。
 
+
+##文件模板
+1. 《行业事件》
+	1. 网页链接：可以不止一个。
+	2. 简要说明：提交者编写。
+	3. 分析人：可选项，可以选择规划组任何一名成员。
+2. 《作弊模式分析》
+	1. 《行业事件》：可以不止一个，链接到所分析的行业事件上。
+	1. 《作弊模式》：可以不止一个，链接到具体作弊模式上。
+	2. 简要说明：分析为何这个事件中隐藏着这些作弊模式。
+	3. 评价人：可选项，可以选择规划组任何一名成员。
+3. 《作弊模式》
+	1. 名称：这种作弊模式的专有名称。
+	2. 正文：作弊过程的描述。
+4. 《行业发展评估》
+	1. 《行业事件》：可以不止一个，链接到所分析的行业事件上。
+	2. 各环节发展：从行业事件中，提炼出某个环节的资源、活跃度两项指标的变化。
+		1. 环节名称：
+		2. 变化印度：资源或活跃度。
+		3. 变化：分为--、-、+、++四种。
+		4. 简要说明
+	3. 综述
+5. 	《行业环节列表》（由规划组公布，《行业发展评估》编写者只能从中选取）
+	1. 环节名称：
+	2. 简要说明：
+6. 	《线下工作计划》
+7. 	《软件需求》
+8. 	《运维工作计划》
