--- a/项目管理.md
+++ b/项目管理.md
@@ -56,6 +56,7 @@
 	2. 正文：作弊过程的描述。
 4. 《行业发展评估》
 	1. 《行业事件》：可以不止一个，链接到所分析的行业事件上。
+	2. 所属OG：各OG的发展情况不同步，因为各自独立写。
 	2. 各环节发展：从行业事件中，提炼出某个环节的资源、活跃度两项指标的变化。
 		1. 环节名称：
 		2. 变化印度：资源或活跃度。
