--- a/项目组成员合同.md
+++ b/项目组成员合同.md
@@ -30,12 +30,12 @@
 2. 会议地点由记录员决定，在周三前通知各成员。请假的成员应提前提交工作日志、任务目标。
 3. 会议固定议程为：
 	1. 各项目成员提交工作日志，进行工作简报。其他成员对该社员“工作结果是否符合任务目标”进行表决。
-	2. 上一次会议主持人提交项目日志，进行项目整体工作简报。其他成员对项目“工作结果是否符合目标”进行表决。
+	2. 上一次会议主持人提交项目日志，进行项目整体工作简报。其他成员对项目“工作结果是否符合工作目标”进行表决。
 	3. （如果有的话）规划组工作简报。或嵌入规划会议，非规划组的项目成员列席。
 	4. 管理员宣布各专户余额和本期经营情况。
 	4. 主持人确定下次项目成员会议时间，主持人、记录员。
 	5. 各项目成员提出各自在下次项目成员会议前能完成的任务目标。
-	6. 记录员汇编各人任务目标及项目整体目标，发布《线下工作计划》、《软件需求》、《运维工作计划》，项目成员修改至表决通过。
+	6. 记录员汇编各人任务目标，起草项目整体工作目标，起草《线下工作计划》、《软件需求》、《运维工作计划》，管理员根据项目情况起草新成员招募通告，项目成员修改至表决通过。
 4. 项目成员全体通过，可以签订本合同附加协议。其余协作事务按照一人一票进行表决，获得大于等于一半项目成员同意则有效。
 5. 项目成员会议纪要在散会前对外公布。如有请假，请假人以及事由将写入会议纪要。规划组工作简报内容不写入会议纪要。
 
