--- a/项目组成员合同.md
+++ b/项目组成员合同.md
@@ -32,7 +32,7 @@
 	1. 各项目成员提交工作日志，进行工作简报。其他成员对该社员“工作结果是否符合任务目标”进行表决。
 	2. 上一次会议主持人提交项目日志，进行项目整体工作简报。其他成员对项目“工作结果是否符合工作目标”进行表决。
 	3. （如果有的话）规划组工作简报。或嵌入规划会议，非规划组的项目成员列席。
-	4. 管理员宣布各专户余额和本期经营情况。
+	4. 管理员宣布各专户余额和本期经营情况，根据表决结果登记工时。
 	4. 主持人确定下次项目成员会议时间，主持人、记录员。
 	5. 各项目成员提出各自在下次项目成员会议前能完成的任务目标。
 	6. 记录员汇编各人任务目标，起草项目整体工作目标，起草《线下工作计划》、《软件需求》、《运维工作计划》，管理员根据项目情况起草新成员招募通告，项目成员修改至表决通过。
