--- a/项目组成员合同.md
+++ b/项目组成员合同.md
@@ -8,7 +8,7 @@
 1. 管理员负责财务管理，需要时可以提名财务人员，经项目成员会议通过后聘任。
 3. 项目组设公积金、公益金、运营金专户。资金由管理员管理。
 4. 项目收入按照劳务收入缴纳个人所得税，税后余额的5%进入公积金、5%进入公益金，其余金额进入运营金专户。
-5. 每位项目成员设一个个人专户。个人专户记录项目成员投入到运营金专户的金额。
+5. 每位项目成员设一个个人专户。个人专户记录项目成员投入到运营金专户的金额。个人专户数额不可转让、不可继承。
 6. 项目成员加入项目组时，需缴纳初始出资。具体金额由项目成员会议决定，初始值为750元。成员初始出资进入合作社运营金专户，同时按实缴金额在个人专户记账。
 7. 当项目需要时，管理员可提出增加出资，经项目成员会议决定后缴纳。成员增加出资进入合作社运营金专户，同时按实缴金额在个人专户记账。
 5. 项目收入进入运营金专户的部分，按照当时项目成员贡献值加权平均，记为各项目成员的投入资金，同时在个人专户记账。
@@ -20,6 +20,7 @@
 7. 退出：项目成员正常退出的最近一个季度末，按照个人专户数额全部提取现金。公式如下：
 	* 该成员提取额现金为E，其它各字母定义同上。
 	* Ei = O*Pi/P
+8. 因项目成员过失使项目遭受损失的，责任人应赔偿。
 
 ##贡献值
 1. 沿袭IT合作社的规则和权重。
@@ -44,9 +45,10 @@
 2. 规划会议应对每一份《行业事件》做出回应，提交《作弊模式分析》或《行业发展评估》。
 
 ##奖罚
-1. 项目成员有下列情形之一的，经其他项目成员一致同意，可以决议将其除名：
-　　（一）未履行出资义务；
-　　（二）因故意或者重大过失给项目组造成损失；
-　　（三）工作结果连续三次或一年累计八次不能获得通过。
-　　对项目成员的除名决议由管理员书面通知被除名人。被除名人接到除名通知之日，除名生效。
-1. 因（一）而除名的，按正常退出提取现金，因（二）、（三）、除名的不得提取现金，项目遭受损失金额明确的，被除名人应赔偿。
+1. 项目成员有下列情形之一的，经其他项目成员一致同意，可以决议将其除名：  
+	（一）未履行出资义务；  
+	（二）死亡或被宣告死亡；  
+	（三）因故意或者重大过失给项目组造成损失；  
+	（四）工作结果连续三次或一年累计八次不能获得通过。  
+	对项目成员的除名决议由管理员书面通知被除名人。被除名人接到除名通知之日，除名生效。
+1. 因（一）、（二）而除名的，按正常退出提取现金，因（三）、（四）而除名的不得提取现金。
