--- a/项目组成员合同.md
+++ b/项目组成员合同.md
@@ -39,16 +39,18 @@
 	6. 记录员汇编各人任务目标，起草项目整体工作目标，起草《线下工作计划》、《软件需求》、《运维工作计划》，管理员根据项目情况起草新成员招募通告，项目成员修改至表决通过。
 4. 项目成员全体通过，可以签订本合同附加协议。其余协作事务按照一人一票进行表决，获得大于等于一半项目成员同意则有效。
 5. 项目成员会议纪要在散会前对外公布。如有请假，请假人以及事由将写入会议纪要。规划组工作简报内容不写入会议纪要。
+6. 由最近一次项目成员会议主持人协调各成员工作。
 
 ##规划会议
 1. 规划会议嵌入在项目成员会议，或由任何一名规划组成员不定期召集。
 2. 规划会议应对每一份《行业事件》做出回应，提交《作弊模式分析》或《行业发展评估》。
 
 ##奖罚
-1. 项目成员有下列情形之一的，经其他项目成员一致同意，可以决议将其除名：  
+1. 项目成员有下列情形之一的，自动将其除名，按正常退出提取现金：  
 	（一）未履行出资义务；  
 	（二）死亡或被宣告死亡；  
+2. 项目成员有下列情形之一的，经其他项目成员一致同意，可以决议将其除名：  
 	（三）因故意或者重大过失给项目组造成损失；  
 	（四）工作结果连续三次或一年累计八次不能获得通过。  
-	对项目成员的除名决议由管理员书面通知被除名人。被除名人接到除名通知之日，除名生效。
-1. 因（一）、（二）而除名的，按正常退出提取现金，因（三）、（四）而除名的不得提取现金。
+	以上两种情况而除名的，被除名人个人专户清零、关闭，不得提取现金。
+3. 对项目成员的除名决议由管理员书面通知被除名人。被除名人接到除名通知之日，除名生效。
