--- a/项目组成员合同.md
+++ b/项目组成员合同.md
@@ -3,6 +3,8 @@
 1. IT合作社与宿主单位解除合同后，各社员自愿以多方合同形式组成食品安全项目组（以下简称“项目组”），签订本合同规定各方的义务和权利。
 2. 项目组设一名管理员，由项目成员会议选举和罢免。首任管理员由IT合作社现任管理员李宠波担任。
 2. 项目组设服务器和仓库。服务器由运维组管理，仓库由管理员管理。运维组所有账号密码应存档到仓库。仓库内的文件、物品清单应向项目组成员公布。
+3. 运维组由项目第一版上线（2013年2月）前加入的项目成员负责。
+3. 月消费总额达到五万元之前，由管理员安排正式注册。项目组所有资产、权利、数据均转入新设立的单位。
 
 ##财务管理
 1. 管理员负责财务管理，需要时可以提名财务人员，经项目成员会议通过后聘任。
@@ -12,7 +14,7 @@
 6. 项目成员加入项目组时，需缴纳初始出资。具体金额由项目成员会议决定，初始值为750元。成员初始出资进入合作社运营金专户，同时按实缴金额在个人专户记账。
 7. 当项目需要时，管理员可提出增加出资，经项目成员会议决定后缴纳。成员增加出资进入合作社运营金专户，同时按实缴金额在个人专户记账。
 5. 项目收入进入运营金专户的部分，按照当时项目成员贡献值加权平均，记为各项目成员的投入资金，同时在个人专户记账。
-6. 报销：项目成员提交报销单，经项目成员会议批准后，管理员从运营金专户付款。
+6. 报销：项目成员提交报销单，经项目成员会议批准后由管理员付款。提升成员工作效果的事项从公益金专户报销，提升项目组持续服务能力的事项从公积金专户报销，其余从运营金专户报销。
 6. 分配：管理员每季度末根据经营情况，结合项目成员的需要，从运营金专户拨出可分配金额。各项目成员可以从中领取现金，按照当时个人专户数额加权分配各成员可领取额度，如有成员不需要使用部分或全部可领取额度，可以指定由其他成员使用。领取现金的成员，从个人专户扣减对应数额。公式如下：
 	* 假设各成员个人专户金额为{Pi}，所有个人专户金额总额为P=P1+P2+...+Pn。可分配金额为S，各成员可领取额度为{Si}。各成员实际领取现金为{Ri}。运营金专户分配前金额为O。
 	* Si = S*Pi/P
@@ -20,6 +22,7 @@
 7. 退出：项目成员正常退出的最近一个季度末，按照个人专户数额全部提取现金。公式如下：
 	* 该成员提取额现金为E，其它各字母定义同上。
 	* Ei = O*Pi/P
+	* Pi = 0
 8. 因项目成员过失使项目遭受损失的，责任人应赔偿。
 
 ##贡献值
@@ -42,15 +45,30 @@
 6. 由最近一次项目成员会议主持人协调各成员工作。
 
 ##规划会议
-1. 规划会议嵌入在项目成员会议，或由任何一名规划组成员不定期召集。
+1. 规划会议嵌入在项目成员会议，或由任何一名规划组成员提前一周召集。
 2. 规划会议应对每一份《行业事件》做出回应，提交《作弊模式分析》或《行业发展评估》。
+3. 规划会议应对《作弊模式》进行表决，大于等于半数规划组成员同意则有效。
 
 ##奖罚
+1. 项目成员有下列情形之一的，计一次警告：  
+	（一）个人工作简报未获得表决通过。  
+	（二）未按时提交《作弊模式分析》或《行业发展评估》。  
+1. 项目成员有下列情形之一的，计一次小过：  
+	（一）作为项目成员会议主持人，项目整体工作简报获得表决通过。  
+	（二）缺席会议。  
 1. 项目成员有下列情形之一的，自动将其除名，按正常退出提取现金：  
 	（一）未履行出资义务；  
 	（二）死亡或被宣告死亡；  
 2. 项目成员有下列情形之一的，经其他项目成员一致同意，可以决议将其除名：  
 	（三）因故意或者重大过失给项目组造成损失；  
 	（四）工作结果连续三次或一年累计八次不能获得通过。  
-	以上两种情况而除名的，被除名人个人专户清零、关闭，不得提取现金。
+	以上两种情况而除名的，被除名人个人专户清零、销户，不得提取现金。
 3. 对项目成员的除名决议由管理员书面通知被除名人。被除名人接到除名通知之日，除名生效。
+4. 项目成员有下列情形之一的，记嘉奖一次：  
+	（一）个人工作简报获得表决通过。  
+	（二）作为记录员，按时完成会议纪要。  
+5. 项目成员有下列情形之一的，记小功一次：  
+	（一）作为项目成员会议主持人，项目整体工作简报获得表决通过。  
+	（二）提交新的《作弊模式》获得表决通过。  
+6. 项目成员有下列情形之一的，记大功一次：  
+	（一）提出新的利益共同体模式，获得项目组与行业各方一致接受。
