--- a/项目组成员合同.md
+++ b/项目组成员合同.md
@@ -61,7 +61,7 @@
 	（二）死亡或被宣告死亡；  
 2. 项目成员有下列情形之一的，经其他项目成员一致同意，可以决议将其除名：  
 	（三）因故意或者重大过失给项目组造成损失；  
-	（四）工作结果连续三次或一年累计八次不能获得通过。  
+	（四）工作结果连续三次或一年累计十次不能获得通过。  
 	以上两种情况而除名的，被除名人个人专户清零、销户，不得提取现金。
 3. 对项目成员的除名决议由管理员书面通知被除名人。被除名人接到除名通知之日，除名生效。
 4. 项目成员有下列情形之一的，记嘉奖一次：  
@@ -72,3 +72,4 @@
 	（二）提交新的《作弊模式》获得表决通过。  
 6. 项目成员有下列情形之一的，记大功一次：  
 	（一）提出新的利益共同体模式，获得项目组与行业各方一致接受。
+7. 奖惩均并对外公布。
