--- a/项目组成员合同.md
+++ b/项目组成员合同.md
@@ -54,8 +54,8 @@
 	（一）个人工作简报未获得表决通过。  
 	（二）未按时提交《作弊模式分析》或《行业发展评估》。  
 1. 项目成员有下列情形之一的，计一次小过：  
-	（一）作为项目成员会议主持人，项目整体工作简报获得表决通过。  
-	（二）缺席会议。  
+	（一）作为项目成员会议主持人，项目整体工作简报未获得表决通过。  
+	（二）未请假缺席会议。  
 1. 项目成员有下列情形之一的，自动将其除名，按正常退出提取现金：  
 	（一）未履行出资义务；  
 	（二）死亡或被宣告死亡；  
@@ -72,4 +72,4 @@
 	（二）提交新的《作弊模式》获得表决通过。  
 6. 项目成员有下列情形之一的，记大功一次：  
 	（一）提出新的利益共同体模式，获得项目组与行业各方一致接受。
-7. 奖惩均并对外公布。
+7. 奖惩均对外公布。
