--- a/项目管理.md
+++ b/项目管理.md
@@ -40,6 +40,9 @@
 5. 项目经理对项目成员的工作日志可以做出评价，评价可以公开查阅。
 6. 任何项目成员、会员可以对项目成员的工作日志做出评价，只有项目成员可以阅读。
 
+##定期核查
+1. 项目经理应定期组织项目核查，检查抑制作弊的效果与预期的偏差。
+2. 项目经理应根据偏差项，分为执行原因和规划原因，分别输入到不同环节处理。
 
 ##文件模板
 1. 《行业事件》
@@ -53,7 +56,8 @@
 	3. 评价人：可选项，可以选择规划组任何一名成员。
 3. 《作弊模式》
 	1. 名称：这种作弊模式的专有名称。
-	2. 正文：作弊过程的描述。
+	2. 定义：作弊过程的描述。
+	3. 对策：具体的工作步骤，以及效果预期。
 4. 《行业发展评估》
 	1. 《行业事件》：可以不止一个，链接到所分析的行业事件上。
 	2. 所属OG：各OG的发展情况不同步，因为各自独立写。
