--- a/项目组成员合同.md
+++ b/项目组成员合同.md
@@ -4,6 +4,8 @@
 2. 项目组设一名管理员，由项目成员会议选举和罢免。首任管理员由IT合作社现任管理员李宠波担任。
 2. 项目组设服务器和仓库。服务器由运维组管理，仓库由管理员管理。运维组所有账号密码应存档到仓库。仓库内的文件、物品清单应向项目组成员公布。
 3. 运维组由项目第一版上线（2013年2月）前加入的项目成员负责。
+4. 项目组暂时由李宠波以自然人身份提供支付宝收款的申请和管理。李宠波应保证项目的收入不得挪作他用，对此应负无限责任。
+5. 由项目组成员表决通过的决定，由全体项目组成员共同承担责任。
 3. 月消费总额达到五万元之前，由管理员安排正式注册。项目组所有资产、权利、数据均转入新设立的单位。
 
 ##财务管理
