--- a/项目组成员合同.md
+++ b/项目组成员合同.md
@@ -54,10 +54,10 @@
 ##奖罚
 1. 项目成员有下列情形之一的，计一次警告：  
 	（一）个人工作简报未获得表决通过。  
-	（二）未按时提交《作弊模式分析》或《行业发展评估》。  
+	（二）作为项目成员会议主持人某一天未提交项目日志，且未请假。  
+	（三）未按时提交《作弊模式分析》或《行业发展评估》。  
 1. 项目成员有下列情形之一的，计一次小过：  
-	（一）作为项目成员会议主持人，项目整体工作简报未获得表决通过。  
-	（二）未请假缺席会议。  
+	（一）未请假缺席会议。  
 1. 项目成员有下列情形之一的，自动将其除名，按正常退出提取现金：  
 	（一）未履行出资义务；  
 	（二）死亡或被宣告死亡；  
@@ -68,10 +68,10 @@
 3. 对项目成员的除名决议由管理员书面通知被除名人。被除名人接到除名通知之日，除名生效。
 4. 项目成员有下列情形之一的，记嘉奖一次：  
 	（一）个人工作简报获得表决通过。  
-	（二）作为记录员，按时完成会议纪要。  
+	（二）作为项目成员会议主持人期间，每天前提交项目日志。 
+	（三）作为记录员，按时完成会议纪要。  
 5. 项目成员有下列情形之一的，记小功一次：  
-	（一）作为项目成员会议主持人，项目整体工作简报获得表决通过。  
-	（二）提交新的《作弊模式》获得表决通过。  
+	（一）提交新的《作弊模式》获得表决通过。  
 6. 项目成员有下列情形之一的，记大功一次：  
 	（一）提出新的利益共同体模式，获得项目组与行业各方一致接受。
 7. 奖惩均对外公布。
