成员义务 全票通过才加入新成员

--- a/项目组成员合同.md
+++ b/项目组成员合同.md
@@ -7,6 +7,9 @@
 4. 项目组暂时由李宠波以自然人身份提供支付宝收款的申请和管理。李宠波应保证项目的收入不得挪作他用，对此应负无限责任。
 5. 由项目组成员表决通过的决定，由全体项目组成员共同承担责任。
 3. 月消费总额达到五万元之前，由管理员安排正式注册。项目组所有资产、权利、数据均转入新设立的单位。
+4. 项目成员的义务：
+	5. 按合同和项目成员会议决议缴纳出资。
+	6. 分担项目组公共事务。
 
 ##财务管理
 1. 管理员负责财务管理，需要时可以提名财务人员，经项目成员会议通过后聘任。
@@ -42,7 +45,7 @@
 	4. 主持人确定下次项目成员会议时间，主持人、记录员。
 	5. 各项目成员提出各自在下次项目成员会议前能完成的任务目标。
 	6. 记录员汇编各人任务目标，起草项目整体工作目标，起草《线下工作计划》、《软件需求》、《运维工作计划》，管理员根据项目情况起草新成员招募通告，项目成员修改至表决通过。
-4. 项目成员全体通过，可以签订本合同附加协议。其余协作事务按照一人一票进行表决，获得大于等于一半项目成员同意则有效。
+4. 项目成员全体通过，可以签订本合同附加协议、批准新成员加入项目组。其余协作事务按照一人一票进行表决，获得大于等于一半项目成员同意则有效。
 5. 项目成员会议纪要在散会前对外公布。如有请假，请假人以及事由将写入会议纪要。规划组工作简报内容不写入会议纪要。
 6. 由最近一次项目成员会议主持人协调各成员工作。
 
