--- a/基本用户协议.md
+++ b/基本用户协议.md
@@ -4,14 +4,11 @@
 您使用我们的服务即表示您已同意本协议。请仔细阅读。
 
 ##定义
-1. 项目、本项目、食品安全项目：IT合作社食品安全项目
-1. 项目组：指项目经理直接任命的项目成员。如非特别指出，只有经过IT合作社社员会议通过，项目经理批准，项目成员方可以项目组名义进行工作。
-1. 宿主单位：正式在工商、民政注册的“北京市海淀区学门智能系统科技研究中心”。
-1. 服务费：包括技术服务费、消费服务费、生产服务费。
-1. 技术服务费：由项目经理直接管理，用于开发、运维、规则设计的经费。
+1. 项目组：由黄勇刚、李宠波、王彤、闫中天根据《项目组成员合同》（以下简称“成员合同” https://github.com/ITCoops/food/blob/master/%E9%A1%B9%E7%9B%AE%E7%BB%84%E6%88%90%E5%91%98%E5%90%88%E5%90%8C.md ）组成的食品安全项目组及其关联单位。
+1. 服务费：包括技术服务费、消费服务费、生产服务费。其中技术服务费由特别条款规定，消费服务费、生产服务费由项目组决定。
+1. 技术服务费：由项目组直接管理，用于开发、运维、规则设计的经费。
 1. 消费服务费：消费专员的工作经费。
 1. 生产服务费：生产专员的工作经费。
-
 
 ##特别条款
 以下条款的修改、删除需进行会员投票，同意票超过反对票可立即生效；或公示十二个月后生效。满足以下条件之一的会员可参与投票：  
@@ -19,9 +16,8 @@
  	* 投票前十二个月参加过本项目组织的线下活动。  
 项目组根据实际情况增加特殊条款，公示后即可生效。   
 
-1. 消费者购买食品时，消费额的2%、物流费的4%为技术服务费。  
+1. 消费者购买食品时消费额的2%、物流费的4%，以及广告收入的20%为技术服务费。  
 1. 隐私信息：会员姓名、手机号码、电子邮件地址属于隐私信息。
-
 
 
 ##一般条款
@@ -29,13 +25,13 @@
 
 1. 账户  
 在您签署本协议，完成会员注册程序或以其他项目组允许的方式实际使用我们的服务时，会获得唯一编号的账户。  
-如您连续一年未使用您的会员名和密码登录食品安全项目，或您设置的会员名涉嫌侵犯他人合法权益，项目组有权终止向您提供服务，注销您的账户。账户注销后，项目组有权将会员名开放给任意用户注册登记使用。  
+如您连续一年未使用您的会员名和密码登录项目网站，或您设置的会员名涉嫌侵犯他人合法权益，项目组有权终止向您提供服务，注销您的账户。账户注销后，项目组有权将会员名开放给任意用户注册登记使用。  
 您应对您的账户（会员名）和密码的安全，以及对通过您的账户（会员名）和密码实施的行为负责。除非有法律规定或司法裁定，且征得项目组的同意，否则，账户（会员名）和密码不得以任何方式转让、赠与或继承（与账户相关的财产权益除外）。如果发现任何人不当使用您的账户或有任何其他可能危及您的账户安全的情形时，您应当立即以有效方式通知项目组，要求项目组暂停相关服务。您理解项目组对您的请求采取行动需要合理时间，项目组对在采取行动前已经产生的后果（包括但不限于您的任何损失）不承担任何责任。  
-为方便您使用我们及关联公司或其他组织的服务（以下称其他服务），您同意并授权项目组将您在注册、使用服务过程中提供、形成的信息传递给向您提供服务的关联公司或其他组织，或从提供服务的关联公司或其他组织获取您在注册、使用其他服务期间提供、形成的信息。
+为方便您使用我们及关联单位或其他组织的服务（以下称其他服务），您同意并授权项目组将您在注册、使用服务过程中提供、形成的信息传递给向您提供服务的关联单位，或从提供服务的关联单位或其他组织获取您在注册、使用其他服务期间提供、形成的信息。
 
 1. 会员  
 在您按照注册页面提示填写信息、阅读并同意本协议并完成全部注册程序后或以其他项目组允许的方式实际使用食品安全项目服务时，您即成为食品安全项目会员（亦称会员）。  
-在注册时，您应当按照法律法规要求，或注册页面的提示准确提供，并及时更新您的资料，以使之真实、及时，完整和准确。如有合理理由怀疑您提供的资料错误、不实、过时或不完整的，项目组有权向您发出询问及/或要求改正的通知，并有权直接做出删除相应资料的处理，直至中止、终止对您提供部分或全部食品安全项目服务。项目组对此不承担任何责任，您将承担因此产生的任何直接或间接支出。
+在注册时，您应当按照法律法规要求，或注册页面的提示准确提供，并及时更新您的资料，以使之真实、及时，完整和准确。如有合理理由怀疑您提供的资料错误、不实、过时或不完整的，项目组有权向您发出询问及/或要求改正的通知，并有权直接做出删除相应资料的处理，直至中止、终止对您提供部分或全部服务。项目组对此不承担任何责任，您将承担因此产生的任何直接或间接支出。
 您应当准确填写并及时更新您提供的电子邮件地址、联系电话、联系地址、邮政编码等联系方式，以便项目组或其他会员与您进行有效联系，因通过这些联系方式无法与您取得联系，导致您在使用食品安全项目服务过程中产生任何损失或增加费用的，应由您完全独自承担。
 您在使用食品安全项目服务过程中，所产生的应纳税赋，以及一切硬件、软件、服务及其它方面的费用，均由您独自承担。 
 
@@ -61,20 +57,20 @@
 	1. 如您涉嫌违反有关法律或者本协议之规定，使食品安全项目遭受任何损失，或受到任何第三方的索赔，或受到任何行政管理部门的处罚，您应当赔偿食品安全项目因此造成的损失及（或）发生的费用，包括合理的律师费用。
 
 1. 特别授权  
-您完全理解并不可撤销地授予宿主单位及其关联公司或单位下列权利：
-	1. 您完全理解并不可撤销地授权宿主单位或宿主单位授权的第三方或您与宿主单位一致同意的第三方，根据本协议及食品安全项目规则的规定，处理您在食品安全项目中发生的所有交易及可能产生的交易纠纷。您同意接受宿主单位或宿主单位授权的第三方或您与宿主单位一致同意的第三方的判断和调处决定。该决定将对您具有法律约束力。  
-	1. 一旦您向食品安全项目及（或）其关联公司或单位，包括但不限于北京市海淀区学门智能系统科技研究中心、北京学门科技有限公司等作出任何形式的承诺，且相关公司或单位已确认您违反了该承诺，则项目组有权立即按您的承诺或协议约定的方式对您的账户采取限制措施，包括中止或终止向您提供服务，并公示相关公司或单位确认的您的违约情况。您了解并同意，项目组无须就相关确认与您核对事实，或另行征得您的同意，且项目组无须就此限制措施或公示行为向您承担任何的责任。  
-	1. 一旦您违反本协议，或与食品安全项目签订的其他协议的约定，项目组有权以任何方式通知食品安全项目关联公司或单位，要求其对您的权益采取限制措施，要求关联公司或单位中止、终止对您提供部分或全部服务，且在其经营或实际控制的任何网站公示您的违约情况。  
-	1. 对于您提供的资料及数据信息，您授予食品安全项目及其关联公司或单位独家的、全球通用的、永久的、免费的许可使用权利 (并有权在多个层面对该权利进行再授权)。此外，项目及其关联公司有权(全部或部份地) 使用、复制、修订、改写、发布、翻译、分发、执行和展示您的全部资料数据（包括但不限于注册资料、交易行为数据及全部展示于项目的各类信息）或制作其派生作品，并以现在已知或日后开发的任何形式、媒体或技术，将上述信息纳入其它作品内。 
+您完全理解并不可撤销地授予项目组及其关联单位下列权利：
+	1. 您完全理解并不可撤销地授权项目组或项目组授权的第三方，根据本协议及食品安全项目规则的规定，处理您在食品安全项目中发生的所有交易及可能产生的交易纠纷。您同意接受项目组或项目组授权的第三方的判断和调处决定。该决定将对您具有法律约束力。  
+	1. 一旦您向项目组及（或）其关联单位作出任何形式的承诺，且项目组及相关单位已确认您违反了该承诺，则项目组有权立即按您的承诺或协议约定的方式对您的账户采取限制措施，包括中止或终止向您提供服务，并公示项目组及相关单位确认的您的违约情况。您了解并同意，项目组无须就相关确认与您核对事实，或另行征得您的同意，且项目组无须就此限制措施或公示行为向您承担任何的责任。  
+	1. 一旦您违反本协议，或与项目组签订的其他协议的约定，项目组有权以任何方式通知项目关联单位，要求其对您的权益采取限制措施，要求关联单位中止、终止对您提供部分或全部服务，且在其经营或实际控制的任何网站公示您的违约情况。  
+	1. 对于您提供的资料及数据信息，您授予项目组及其关联单位独家的、全球通用的、永久的、免费的许可使用权利 (并有权在多个层面对该权利进行再授权)。项目组及其关联单位无权直接公布隐私信息，此外，项目及其关联单位有权(全部或部份地) 使用、复制、修订、改写、发布、翻译、分发、执行和展示您的全部资料数据（包括但不限于注册资料、交易行为数据及全部展示于项目的各类信息）或制作其派生作品，并以现在已知或日后开发的任何形式、媒体或技术，将上述信息纳入其它作品内。 
 
 1. 责任范围和责任限制  
-	1. 项目组负责按"现状"和"可得到"的状态向您提供食品安全项目服务。但项目组对食品安全项目服务不作任何明示或暗示的保证，包括但不限于食品安全项目服务的适用性、没有错误或疏漏、持续性、准确性、可靠性、适用于某一特定用途。同时，项目组也不对食品安全项目服务所涉及的技术及信息的有效性、准确性、正确性、可靠性、质量、稳定、完整和及时性作出任何承诺和保证。
+	1. 项目组负责按"现状"和"可得到"的状态向您提供服务。但项目组对服务不作任何明示或暗示的保证，包括但不限于服务的适用性、没有错误或疏漏、持续性、准确性、可靠性、适用于某一特定用途。同时，项目组也不对服务所涉及的技术及信息的有效性、准确性、正确性、可靠性、质量、稳定、完整和及时性作出任何承诺和保证。
 	1. 您了解食品安全项目中的信息系用户自行发布，且可能存在风险和瑕疵。食品安全项目仅作为交易场所。食品安全项目仅作为您获取物品或服务信息、物色交易对象、就物品和/或服务的交易进行协商及开展交易的场所，但项目组无法控制交易所涉及的物品的质量、安全或合法性，商贸信息的真实性或准确性，以及交易各方履行其在贸易协议中各项义务的能力。您应自行谨慎判断确定相关物品及/或信息的真实性、合法性和有效性，并自行承担因此产生的责任与损失。
 	1. 除非法律法规明确要求，或出现以下情况，否则，项目组没有义务对所有用户的注册数据、商品（服务）信息、交易行为以及与交易有关的其它事项进行事先审查：
 		* 项目组有合理的理由认为特定会员及具体交易事项可能存在重大违法或违约情形。
 		* 项目组有合理的理由认为用户的行为涉嫌违法或不当。
-	1. 宿主单位或宿主单位授权的第三方或您与宿主单位一致同意的第三方有权基于您不可撤销得授权受理您与其他会员因交易产生的争议，并有权单方判断与该争议相关的事实及应适用的规则，进而作出处理决定，包括但不限于调整相关订单的交易状态，指令支付合作方将争议货款的全部或部分支付给交易一方或双方。该处理决定对您有约束力。如您未在限期内执行处理决定的，则宿主单位有权利通过项目组（但无义务）直接使用您支付宝账户内的款项，或您向宿主单位及其关联公司交纳的保证金代为支付。您应及时补足保证金并弥补宿主单位及其关联公司的损失，否则宿主单位及其关联公司有权直接抵减您在其它合同项下的权益，并有权继续追偿。  
-	您理解并同意，宿主单位或宿主单位授权的第三方或您与宿主单位一致同意的第三方并非司法机构，仅能以普通人的身份对证据进行鉴别，宿主单位或宿主单位授权的第三方或您与宿主单位一致同意的第三方对争议的调处完全是基于您不可撤销的授权，其无法保证争议处理结果符合您的期望，也不对争议调处结论承担任何责任。如您因此遭受损失，您同意自行向受益人索偿。
+	1. 项目组或项目组授权的第三方有权基于您不可撤销的授权受理您与其他会员因交易产生的争议，并有权单方判断与该争议相关的事实及应适用的规则，进而作出处理决定，包括但不限于调整相关订单的交易状态，指令支付合作方将争议货款的全部或部分支付给交易一方或双方。该处理决定对您有约束力。如您未在限期内执行处理决定的，则项目组有权（但无义务）直接使用您账户内的款项，或您向项目组及其关联单位交纳的保证金代为支付。您应及时补足保证金并弥补项目组及其关联单位的损失，否则项目组及其关联单位有权直接抵减您在其它合同项下的权益，并有权继续追偿。  
+	您理解并同意，项目组或项目组授权的第三方并非司法机构，仅能以普通人的身份对证据进行鉴别，项目组或项目组授权的第三方对争议的调处完全是基于您不可撤销的授权，其无法保证争议处理结果符合您的期望，也不对争议调处结论承担任何责任。如您因此遭受损失，您同意自行向受益人索偿。
 	1. 您了解并同意，项目组不对因下述任一情况而导致您的任何损害赔偿承担责任，包括但不限于利润、商誉、使用、数据等方面的损失或其它无形损失的损害赔偿 (无论项目组是否已被告知该等损害赔偿的可能性) ：
 		* 使用或未能使用食品安全项目服务。
 		* 第三方未经批准的使用您的账户或更改您的数据。
@@ -86,9 +82,9 @@
 1. 协议终止
 	1. 您同意，项目组有权自行全权决定以任何理由不经事先通知的中止、终止向您提供部分或全部食品安全项目服务，暂时冻结或永久冻结（注销）您的账户，且无须为此向您或任何第三方承担任何责任。
 	1. 出现以下情况时，项目组有权直接以注销账户的方式终止本协议:
-		* 项目组终止向您提供服务后，您涉嫌再一次直接或间接或以他人名义注册为食品安全项目用户的；
+		* 项目组终止向您提供服务后，您涉嫌再一次直接或间接或以他人名义注册为食品安全项目会员的；
 		* 您提供的电子邮箱不存在或无法接收电子邮件，且没有其他方式可以与您进行联系，或项目组以其它联系方式通知您更改电子邮件信息，而您在项目组通知后三个工作日内仍未更改为有效的电子邮箱的。
-		* 您注册信息中的主要内容不真实或不准确或不及时或不完整。
+		* 您注册信息中的内容不真实或不准确或不及时或不完整。
 		* 本协议（含规则）变更时，您明示并通知项目组不愿接受新的服务协议的；
 		* 其它项目组认为应当终止服务的情况。
 	1.您有权向项目组要求注销您的账户，经项目组审核同意的，项目组注销（永久冻结）您的账户，届时，您与食品安全项目基于本协议的合同关系即终止。您的账户被注销（永久冻结）后，项目组没有义务为您保留或向您披露您账户中的任何信息，也没有义务向您或第三方转发任何您未曾阅读或发送过的信息。
@@ -106,7 +102,6 @@
 1. 法律适用、管辖与其他
 	1. 本协议之效力、解释、变更、执行与争议解决均适用中华人民共和国大陆地区法律，如无相关法律规定的，则应参照通用商业惯例和（或）行业惯例。
 	1. 本协议包含了您使用食品安全项目各项服务需遵守的一般性规范，您在使用某项食品安全项目服务时还需遵守适用于该服务的特殊性规范。一般性规范如与特殊性规范不一致或有冲突，则特殊性规范具有优先效力。
-	1. 因本协议产生之争议需根据您使用的服务归属的角色确定具体的争议对象，例如因您购买某农场食品所产生的争议应由该农场的经营者与您沟通并处理。您与食品安全项目的经营者均同意以宿主单位住所地人民法院为第一审管辖法院。
-
+	1. 因本协议产生之争议需根据您使用的服务归属的角色确定具体的争议对象，例如因您购买某农场食品所产生的争议应由该农场的经营者与您沟通并处理。您同意以项目组管理员住所地人民法院为第一审管辖法院。
 
 1. 本项目的账号、密码是参与信任链的凭证。信任是基于个人的，因此不能转让、继承。
