或者项目组认为您设置的会员名可能影响项目运营

--- a/基本用户协议.md
+++ b/基本用户协议.md
@@ -25,7 +25,7 @@
 
 1. 账户  
 在您签署本协议，完成会员注册程序或以其他项目组允许的方式实际使用我们的服务时，会获得唯一编号的账户。  
-如您连续一年未使用您的会员名和密码登录项目网站，或您设置的会员名涉嫌侵犯他人合法权益，项目组有权终止向您提供服务，注销您的账户。账户注销后，项目组有权将会员名开放给任意用户注册登记使用。  
+如您连续一年未使用您的会员名和密码登录项目网站，或您设置的会员名涉嫌侵犯他人合法权益，或者项目组认为您设置的会员名可能影响项目运营，项目组有权终止向您提供服务，注销您的账户。账户注销后，项目组有权将会员名开放给任意用户注册登记使用。  
 您应对您的账户（会员名）和密码的安全，以及对通过您的账户（会员名）和密码实施的行为负责。除非有法律规定或司法裁定，且征得项目组的同意，否则，账户（会员名）和密码不得以任何方式转让、赠与或继承（与账户相关的财产权益除外）。如果发现任何人不当使用您的账户或有任何其他可能危及您的账户安全的情形时，您应当立即以有效方式通知项目组，要求项目组暂停相关服务。您理解项目组对您的请求采取行动需要合理时间，项目组对在采取行动前已经产生的后果（包括但不限于您的任何损失）不承担任何责任。  
 为方便您使用我们及关联单位或其他组织的服务（以下称其他服务），您同意并授权项目组将您在注册、使用服务过程中提供、形成的信息传递给向您提供服务的关联单位，或从提供服务的关联单位或其他组织获取您在注册、使用其他服务期间提供、形成的信息。
 
