--- a/需求审议.201306.md
+++ b/需求审议.201306.md
@@ -4,7 +4,7 @@
 1. 审议过程分为三部分：
 	1. 背景分析：列出需求所依赖的行业背景问题，以明确需求的前提、假设和解决思路。
 	2. 项目运行：审议项目的运行方式是否符合行业问题的解决思路。
-	3. 具体需求：审议项目的线上（流程、界面）、线下（流程、工作表单）。 
+	3. 具体需求：审议项目的线上（流程、界面）、线下（流程、工作表单）是否支撑项目运行。 
 2. 为了最大程度吸取审议人的意见，“背景分析”部分安排如下：
 	1. 需求起草人提前列出所依赖的行业背景问题，并书面提交对这些问题的分析。
 	2. 审议人先不阅读需求起草人的分析，先各自独立思考，陈述自己对问题的看法。
@@ -18,19 +18,19 @@
 
 ##背景分析问题列表
 以下是项目需求说依赖的行业背景问题。预计每个问题讨论20分钟。 
-1. 在您眼中，能有效地向消费者提供安全食品的模式有哪些。
-2. 有哪些向消费者提供安全食品的模式，是作弊者（试图误导消费者高估食品安全程度）难以模仿的。在您熟悉的业务模式中，诚信经营者与模仿的作弊者之间的竞争情况是怎么样的。
-3. 您认为食品安全行业结束高速发展进入稳定期还需要多长时间。您在第一个问题中列出的业务模式，它们在稳定阶段是怎样的情况。如果您认为稳定阶段有多种可能，请尽量描述您认为最好、最坏的几种可能。
-4. 您认为具体有哪些工作可以避免向较坏的稳定状况发展。（包括其他人提出的较坏可能） 
+1. 在您眼中，能有效地向消费者提供安全食品的模式有哪些。  
+2. 有哪些向消费者提供安全食品的模式，是作弊者（试图误导消费者高估食品安全程度）难以模仿的。在您熟悉的业务模式中，诚信经营者与模仿的作弊者之间的竞争情况是怎么样的。  
+3. 您认为食品安全行业结束高速发展进入稳定期还需要多长时间。您在第一个问题中列出的业务模式，它们在稳定阶段是怎样的情况。如果您认为稳定阶段有多种可能，请尽量描述您认为最好、最坏的几种可能。  
+4. 您认为具体有哪些工作可以避免向较坏的稳定状况发展。（包括其他人提出的较坏可能）   
 
 ##项目运行问题列表
-项目组先讲解项目运行的规划，包括线上、线下的工作，以及这些工作如何支撑背景分析中的陈述。然后，各审议人就以下问题提出意见。预计共40分钟。
-1. 这一规划是否有效支撑项目组对上一环节（背景分析）中的构想。您有哪些改进的建议。
-2. 项目组的内部规则，是否有效支撑项目这样运行。您有哪些改进的建议。
-3. 根据您或者其他审议人在上一环节（背景分析）的构想，项目运行方面您有哪些建议。
+项目组先讲解项目运行的规划，包括线上、线下的工作，以及这些工作如何支撑背景分析中的陈述。然后，各审议人就以下问题提出意见。预计共40分钟。  
+1. 这一规划是否有效支撑项目组对上一环节（背景分析）中的构想。您有哪些改进的建议。  
+2. 项目组的内部规则，是否有效支撑项目这样运行。您有哪些改进的建议。  
+3. 根据您或者其他审议人在上一环节（背景分析）的构想，项目运行方面您有哪些建议。  
 
 ##具体需求问题列表
-项目组先讲解项目的线上（流程、界面）、线下（流程、工作表单）具体工作安排。然后，各审议人就以下问题提出意见。预计共60分钟。
-1. 这些需求是否有效支撑上一环节（项目运行）的规划。您有哪些改进的建议。
-2. 根据您或者其他审议人在上一环节（项目运行）的建议，在需求方面您有哪些建议。
+项目组先讲解项目的线上（流程、界面）、线下（流程、工作表单）具体工作安排。然后，各审议人就以下问题提出意见。预计共60分钟。  
+1. 这些需求是否有效支撑上一环节（项目运行）的规划。您有哪些改进的建议。  
+2. 根据您或者其他审议人在上一环节（项目运行）的建议，在需求方面您有哪些建议。  
 
