--- a/需求审议.201306.md
+++ b/需求审议.201306.md
@@ -17,7 +17,7 @@
 	4. 固定议程之后安排有充足的自由交流时间，有额外问题可以先记下，到时展开讨论。
 
 ##背景分析问题列表
-以下是项目需求说依赖的行业背景问题。预计每个问题讨论20分钟。   
+以下是项目需求所依赖的行业背景问题。预计每个问题讨论20分钟。   
 
 1. 在您眼中，能有效地向消费者提供安全食品的模式有哪些。  
 2. 有哪些向消费者提供安全食品的模式，是作弊者（试图误导消费者高估食品安全程度）难以模仿的。在您熟悉的业务模式中，诚信经营者与模仿的作弊者之间的竞争情况是怎么样的。  
