--- a/基本用户协议.md
+++ b/基本用户协议.md
@@ -105,3 +105,8 @@
 	1. 因本协议产生之争议需根据您使用的服务归属的角色确定具体的争议对象，例如因您购买某农场食品所产生的争议应由该农场的经营者与您沟通并处理。您同意以项目组管理员住所地人民法院为第一审管辖法院。
 
 1. 本项目的账号、密码是参与信任链的凭证。信任是基于个人的，因此不能转让、继承。
+
+1. 版本升级
+	1. 您已充分了解本项目所属行业处于发展阶段，业务需求随行业动态可能发生较大变化。
+	2. 您同意，项目组在版本升级时无须保留所有数据。您已对自己提交的数据做好备份。
+	
