--- a/积分规则.md
+++ b/积分规则.md
@@ -5,8 +5,7 @@
 2. 工作中出现资源不足时，运营组应严格按照积分高低分配资源。
 3. 本规则由规划组拟定，经项目成员会议审批后生效。
 
-##细则
-加分表
+##加分表
  <table>
 <tr><th>行为</th><th>积分</th><th>备注</th></tr>
 <tr><td>提交安全判断</td><td>10</td><td></td></tr>
@@ -17,6 +16,8 @@
 <tr><td>组织活动</td><td>10</td><td>包括农场参观、讲座等活动，经过区域运营组审议成为项目正式活动</td></tr>
 </table>  
 
+##细则
 1. 积分记录到小数点后两位，对千分位进行四舍五入。
 2. 每天凌晨时，所有会员的积分递减0.5%。
-3. 会员参与积分兑换服务，将扣除相应的积分。
+3. 如果某活动不产生其他会员所需要的信息，视为积分兑换服务，将扣除相应的积分。
+4. 如果某活动产生其他会员所需要的信息，按照参与活动的会员积分高低分配活动经费，不扣除积分。
