--- a/需求陈述.201306.md
+++ b/需求陈述.201306.md
@@ -41,7 +41,7 @@
 	1. 行业分析：在项目组以外的开放环境中进行，通过有针对性的交流持续修正对行业形势的判断。并与合作方共享相近的观点和愿景。
 	2. 线下活动：运营工作的主要目标是产生可信任的安全判断。产生方式由规划组定义并持续修订。 
 
-4. 项目组的构成：（见项目规则）
+4. 项目组的构成：（<a href="项目介绍及规则.doc">项目规则</a>）
  
 5. 项目组内部规则（<a href="项目组成员合同.md">内部合同</a>）
 	1. 权力分配：
