--- a/需求陈述.201306.md
+++ b/需求陈述.201306.md
@@ -37,13 +37,20 @@
 	2. 可以在零收入的阶段，长期保持项目运行。
 	3. 项目组本身无法追求作弊带来的利益。
 3. 运行框架：  
-    <img src="img/2.png" />
+    <img src="img/3.png" />
 	1. 行业分析：在项目组以外的开放环境中进行，通过有针对性的交流持续修正对行业形势的判断。并与合作方共享相近的观点和愿景。
 	2. 线下活动：运营工作的主要目标是产生可信任的安全判断。产生方式由规划组定义并持续修订。 
+	3. 交易：与传统电商的差别。
+		* 结构化的安全信息
+		* 食品保存的困难（恶意压货、取消订单等问题）
+		* 种养殖的风险（不可抗力、调剂等问题）
+		* 配送份额（订单-付款单-发货单等问题）
+		* 物流（宅配确认、非自有物流的管理）
+		* 简化的购物流程
+		* 后悔权和清醒期
 
-4. 项目组的构成：（<a href="项目介绍及规则.doc">项目规则</a>）
  
-5. 项目组内部规则（<a href="项目组成员合同.md">内部合同</a>）
+4. 项目组内部规则（<a href="项目组成员合同.md">内部合同</a>）
 	1. 权力分配：
 	2. 利益分配：
 	3. 零收入运行模式：
@@ -53,6 +60,23 @@
 		* 开放的行业分析，合作方共享的危机和愿景。
 		* 公开的会议、日志、需求。
 		* 公开的财务数据。
+
+5. 四层结构：
+	 <img src="img/4.png" />
+	项目内主要由指令流、信息流、资金流、物流四个层次。  
+
+	1. 物流  
+		<img src="img/5.png" />
+		* 引入集散点、取菜点。
+		* 自动生成配送方案。
+	2. 资金流
+		<img src="img/6.png" />
+	3. 信息流：  
+			<img src="img/3.png" />
+		1. 水军及差评师：
+		2. 
+	4. 项目组的构成：（<a href="项目介绍及规则.doc">项目规则</a>）
+		<img src="img/proj.png" />
 
 ##具体需求陈述
 项目组先讲解项目的线上（流程、界面）、线下（流程、工作表单）具体工作安排。然后，各审议人就以下问题提出意见。预计共60分钟。  
