--- a/需求陈述.201306.md
+++ b/需求陈述.201306.md
@@ -10,15 +10,12 @@
 2. 有哪些向消费者提供安全食品的模式，是作弊者（试图误导消费者高估食品安全程度）难以模仿的。在您熟悉的业务模式中，诚信经营者与模仿的作弊者之间的竞争情况是怎么样的。 
  
     目前各种模式都缺乏抑制作弊者的手段。作弊者能否生存，不在于是否被识别，而取决于识破者能否有效传播信息。
-	1. 生产者直销：生产者发布虚假或模糊的安全信息，模仿安全食品生产者的宣传方案。
-	2. 农夫市集：安全信息核实和披露工作不到位，市集组织者仅仅在宣传和摊位布置方面模仿做得较好的市集。 
-	3. 线上渠道：先以安全食品打开渠道，之后从常规渠道进货销售，仍模仿安全食品的介绍和定价。
-	4. 线下渠道：先以安全食品起步，然后加大提成比例迫使安全食品离场，高利润的不安全食品进入。同时保持在消费者眼中的定位。  
+	生产者直销、农夫市集、线上渠道、线下渠道几种模式，都有模仿者的生存空间。由于作弊者干扰了消费者的信心。在总体上供应不足的情况下，诚信经营的生产者、渠道仍然有亏损的情况。  
 
 
 3. 您认为食品安全行业结束高速发展进入稳定期还需要多长时间。您在第一个问题中列出的业务模式，它们在稳定阶段是怎样的情况。如果您认为稳定阶段有多种可能，请尽量描述您认为最好、最坏的几种可能。  
     还需要三年以上。在此之前，行业内呈现多对多的形态--生产者同时向多种渠道供货，消费者同时从多种渠道采购，活跃人士同时参与多个项目。。。
-	1. 较坏的可能：作弊的线上渠道实现垄断，控制农夫市集、线下渠道，打压直销模式的生产者，压低农场收购价甚至采购虚假安全食品。使农业人才难以通过生产安全食品健康盈利。消费者即使识破作弊行为，也没有其它途径购买到安全食品。因为没有组织起来，只好各自选购尽可能安全的食品。资本进入作弊的线上渠道后获取暴利，安全退出。
+	1. 较坏的可能：作弊的线上渠道实现垄断，控制农夫市集、线下渠道，打压直销模式的生产者，压低农场收购价甚至采购虚假安全食品。使农业人才难以通过生产安全食品健康盈利。消费者即使识破作弊行为，也没有其它途径购买到安全食品。因为没有组织起来，只好各自选购尽可能安全的食品。资本进入作弊的线上渠道后获取暴利，安全退出。  
 	2. 较好的可能：行业内各种模式组织起来，分别服务于不同层次、不同需要的消费者，并随着消费者的成长而不停改进服务模式。诚信经营的线上、线下渠道持续获得资金和人才。一旦销售虚假安全食品则立即被识破并清理出行业。人才成熟后，先农夫市集、直销生产者转移。  
 
 4. 您认为具体有哪些工作可以避免向较坏的稳定状况发展。（包括其他人提出的较坏可能）
@@ -40,7 +37,8 @@
     <img src="img/3.png" />
 	1. 行业分析：在项目组以外的开放环境中进行，通过有针对性的交流持续修正对行业形势的判断。并与合作方共享相近的观点和愿景。
 	2. 线下活动：运营工作的主要目标是产生可信任的安全判断。产生方式由规划组定义并持续修订。 
-	3. 交易：与传统电商的差别。
+	3. 接触处于低谷的诚实生产者、渠道，为现有的物流、消费者服务提供更易于生存的运行框架。
+	4. 交易：与传统电商的差别。
 		* 结构化的安全信息
 		* 食品保存的困难（恶意压货、取消订单等问题）
 		* 种养殖的风险（不可抗力、调剂等问题）
@@ -75,10 +73,14 @@
 	3. 零收入运行模式：
 		* 最低20页/季度的开发。
 		* 直接兼管两个运营区域。 
+		* 避开同行的客户群，仅仅从项目成员的亲友开始构造信任网络。
 	4. 透明度：
 		* 开放的行业分析，合作方共享的危机和愿景。
 		* 公开的会议、日志、需求。
 		* 公开的财务数据。
+6. 会员积分（<a href="积分规则.md">规则</a>）
+	1. 避免运营组刻意追求短期消费额。
+	2. 把项目资源集中运用到可信任信息的生成和传播。 
 
 ##具体需求陈述
 项目组先讲解项目的线上（流程、界面）、线下（流程、工作表单）具体工作安排。然后，各审议人就以下问题提出意见。预计共60分钟。  
