--- a/积分规则.md
+++ b/积分规则.md
@@ -14,6 +14,7 @@
 <tr><td>提交《作弊模式分析》</td><td>15</td><td>经过规划组审议成为正式内容</td></tr>
 <tr><td>提交《行业发展评估》</td><td>15</td><td>经过规划组审议成为正式内容</td></tr>
 <tr><td>组织活动</td><td>10</td><td>包括农场参观、讲座等活动，经过区域运营组审议成为项目正式活动</td></tr>
+<tr><td>挑战成功</td><td>30</td><td>检验结果支持挑战者判断</td></tr>
 </table>  
 
 ##细则
