--- a/需求陈述.201306.md
+++ b/需求陈述.201306.md
@@ -14,9 +14,19 @@
 
 
 3. 您认为食品安全行业结束高速发展进入稳定期还需要多长时间。您在第一个问题中列出的业务模式，它们在稳定阶段是怎样的情况。如果您认为稳定阶段有多种可能，请尽量描述您认为最好、最坏的几种可能。  
-    还需要三年以上。在此之前，行业内呈现多对多的形态--生产者同时向多种渠道供货，消费者同时从多种渠道采购，活跃人士同时参与多个项目。。。
-	1. 较坏的可能：作弊的线上渠道实现垄断，控制农夫市集、线下渠道，打压直销模式的生产者，压低农场收购价甚至采购虚假安全食品。使农业人才难以通过生产安全食品健康盈利。消费者即使识破作弊行为，也没有其它途径购买到安全食品。因为没有组织起来，只好各自选购尽可能安全的食品。资本进入作弊的线上渠道后获取暴利，安全退出。  
-	2. 较好的可能：行业内各种模式组织起来，分别服务于不同层次、不同需要的消费者，并随着消费者的成长而不停改进服务模式。诚信经营的线上、线下渠道持续获得资金和人才。一旦销售虚假安全食品则立即被识破并清理出行业。人才成熟后，先农夫市集、直销生产者转移。  
+	>    还需要三年以上。  
+	>	在此之前，行业内呈现多对多的形态--生产者同时向多种渠道供货，消费者同时从多种渠道采购，活跃人士同时参与多个项目。。。
+
+	1. 较坏的可能：
+		1. 行业内大部分农场的安全属性经常变化，最差时接近普通食品。
+		2. 食品安全行业说占用的土地，远远低于自然条件-产量所决定的的极限。
+		3. 资本试图进入作弊渠道获取暴利，能够安全退出。人才进入行业后淤积在局部，无法顺利增值。
+		4. 作弊渠道实现垄断，控制农夫市集，打压直销模式的生产者，压低农场收购价甚至采购虚假安全食品。使农业人才难以通过生产安全食品健康盈利。消费者即使识破作弊行为，也没有其它途径购买到安全食品。因为没有组织起来，只好各自选购尽可能安全的食品。  
+	2. 较好的可能：
+		1. 供应安全食品的农场生产销售稳定，安全属性稳定在较高水平，土地面积接近自然条件-产量所决定的的极限。
+		2. 资金、人才进入食品安全行业的路径相对稳定，风险较低，收益预期较合理。
+		3. 行业内各种模式组织起来，分别服务于不同层次、不同需要的消费者，并随着消费者的成长而不停改进服务模式。
+		4. 诚信经营的线上、线下渠道持续获得资金和人才。一旦销售虚假安全食品则立即被识破并清理出行业。人才成熟后，向农夫市集、直销生产者转移。  
 
 4. 您认为具体有哪些工作可以避免向较坏的稳定状况发展。（包括其他人提出的较坏可能）
 	关键在于作弊行为被识破后，能否广泛传播。如果只有识破者自己拒绝购买，作弊者的损失并不大。消费者之间可信任的传播途径，应具备以下特征：
