--- a/需求陈述.201306.md
+++ b/需求陈述.201306.md
@@ -19,7 +19,7 @@
 
 	1. 较坏的可能：
 		1. 行业内大部分农场的安全属性经常变化，最差时接近普通食品。
-		2. 食品安全行业说占用的土地，远远低于自然条件-产量所决定的的极限。
+		2. 食品安全行业所占用的土地，远远低于自然条件-产量所决定的的极限。
 		3. 资本试图进入作弊渠道获取暴利，能够安全退出。人才进入行业后淤积在局部，无法顺利增值。
 		4. 作弊渠道实现垄断，控制农夫市集，打压直销模式的生产者，压低农场收购价甚至采购虚假安全食品。使农业人才难以通过生产安全食品健康盈利。消费者即使识破作弊行为，也没有其它途径购买到安全食品。因为没有组织起来，只好各自选购尽可能安全的食品。  
 	2. 较好的可能：
@@ -70,7 +70,7 @@
 		* 技术服务费已通过特别条款锁死。
 		* 其它服务费比例，由项目组根据情况调整。
 	3. 信息流：  
-			<img src="img/3.png" />
+			<img src="img/7.png" />
 		1. 水军及差评师：无法快速信任，可以快速失去信任。
 		2. 开放的信任计算：第三方可以提供收费算法。
 	4. 项目组的构成：（<a href="项目介绍及规则.doc">项目规则</a>）
