--- a/项目管理.md
+++ b/项目管理.md
@@ -1,6 +1,13 @@
 
 
-<img src="img/项目模型.jpg">项目模型</img>
+##全局流程
+
+<img src="img/2.png" alt="流程图"></img>
+
+
+##表单要求
+1. 
+
 
 ##行业事件
 1. 任何项目成员、会员都可以在项目官网提交行业事件，可以只提供链接，可以指定项目成员分析。默认情况下，随机从规划组成员选择一人分析。
