插图的本地路径

--- a/需求陈述.201306.md
+++ b/需求陈述.201306.md
@@ -44,7 +44,8 @@
 	2. 可以在零收入的阶段，长期保持项目运行。
 	3. 项目组本身无法追求作弊带来的利益。
 3. 运行框架：  
-    <img src="img/3.png" />
+	![运行框架](img/3.png)  
+
 	1. 行业分析：在项目组以外的开放环境中进行，通过有针对性的交流持续修正对行业形势的判断。并与合作方共享相近的观点和愿景。
 	2. 线下活动：运营工作的主要目标是产生可信任的安全判断。产生方式由规划组定义并持续修订。 
 	3. 接触处于低谷的诚实生产者、渠道，为现有的物流、消费者服务提供更易于生存的运行框架。
@@ -58,23 +59,26 @@
 		* 后悔权和清醒期
 
 4. 四层结构：
-	 <img src="img/4.png" />
+
+	![四层结构](img/4.png)  
+
 	项目内主要由指令流、信息流、资金流、物流四个层次。  
 
 	1. 物流：  
-		<img src="img/5.png" />
+		![物流模型](img/5.png)  
+  
 		* 引入集散点、取菜点。
 		* 自动生成配送方案。
 	2. 资金流：  
-		<img src="img/6.png" />
+		![资金流](img/6.png)   
 		* 技术服务费已通过特别条款锁死。
 		* 其它服务费比例，由项目组根据情况调整。
 	3. 信息流：  
-			<img src="img/7.png" />
+		![信息流](img/7.png)   
 		1. 水军及差评师：无法快速信任，可以快速失去信任。
 		2. 开放的信任计算：第三方可以提供收费算法。
 	4. 项目组的构成：（<a href="项目介绍及规则.doc">项目规则</a>）
-		<img src="img/proj.png" />
+		![项目组构成](img/proj.png)   
 
 
 5. 项目组内部规则（<a href="项目组成员合同.md">内部合同</a>）
