--- a/项目管理.md
+++ b/项目管理.md
@@ -69,7 +69,7 @@
 	2. 所属OG：各OG的发展情况不同步，因为各自独立写。
 	2. 各环节发展：从行业事件中，提炼出某个环节的资源、活跃度两项指标的变化。
 		1. 环节名称：
-		2. 变化印度：资源或活跃度。
+		2. 变化维度：资源或活跃度。
 		3. 变化：分为--、-、+、++四种。
 		4. 简要说明
 	3. 综述
