--- a/项目管理.md
+++ b/项目管理.md
@@ -72,7 +72,7 @@
 		2. 变化维度：资源或活跃度。
 		3. 变化：分为--、-、+、++四种。
 		4. 简要说明
-	3. 综述
+	3. 综述:综述结束时应明确对项目线下工作、软件需求的影响。
 5. 	《行业环节列表》（由规划组公布，《行业发展评估》编写者只能从中选取）
 	1. 环节名称：
 	2. 简要说明：
