--- a/物流工作.md
+++ b/物流工作.md
@@ -3,6 +3,36 @@
 ##CSA物流 
 需求整理稿
 
+###合作模式
+1. 模式列表
+
+	<table>
+		<tr><th width=20%></th><th>一</th><th>二</th><th>三</th><th>四</th><th>五</th></tr>
+		<tr><td>简称</td><td>基本</td><td>万家康</td><td>物流合作1</td><td>物流合作2</td><td>CRM</td></tr>
+		<tr><td>备注</td><td></td><td>生产者通过承运方送货给自己发展的会员。</td><td>承运方给项目外用户送货</td><td>项目内消费者委托承运方取货</td><td>生产者管理自有会员</td></tr>
+		<tr><td>生产者使用系统（基本/物流）</td><td>是/是</td><td>是/是</td><td>否/否</td><td>否/否</td><td>是/否</td></tr>
+		<tr><td>消费者使用系统（基本/物流）</td><td>是/是</td><td>否/否</td><td>否/否</td><td>否/是</td><td>否/否</td></tr>
+		<tr><td>承运方使用系统</td><td>是</td><td>是</td><td>是</td><td>是</td><td>否</td></tr>
+		<tr><td>消费者选择物流</td><td>是</td><td>否</td><td>否</td><td>是</td><td>否</td></tr>
+		<tr><td>菜款提成（IT-消费-生产）</td><td>2-4-6</td><td>2-0-0</td><td>0</td><td>0</td><td>2-0-0</td></tr>
+		<tr><td>运费提成（IT-消费-生产）</td><td>4-0-8</td><td>4-0-8</td><td>4-0-0</td><td>4-0-0</td><td>0</td></tr>
+		<tr><td colspan=6 align=center> 支持的配送类型(DeliveryType) </td></tr>
+
+		<tr><td>[1]农场自提</td><td></td><td></td><td></td><td></td><td></td></tr>
+		<tr><td>[2]集散点自提</td><td></td><td></td><td></td><td></td><td></td></tr>
+		<tr><td>[3]取菜点自提</td><td></td><td></td><td></td><td></td><td></td></tr>
+		<tr><td>[4]其它自提（比如中铁快运仓库自提）</td><td></td><td></td><td></td><td></td><td></td></tr>
+		<tr><td>[11]集散点宅配</td><td></td><td></td><td></td><td></td><td></td></tr>
+		<tr><td>[12]取菜点宅配</td><td></td><td></td><td></td><td></td><td></td></tr>
+		<tr><td>[13]农场宅配 </td><td></td><td></td><td></td><td></td><td></td></tr>
+		<tr><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+		<tr><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+		<tr><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+	</table>
+
+2. 配送类型
+###
+
 ###目前的构想  
 1. 干线与宅配衔接
 	1. 干线负责到农场揽收，运送到物流商的分拣中心或者配送站点。同一区域的合
