--- a/物流工作.md
+++ b/物流工作.md
@@ -18,20 +18,121 @@
 		<tr><td>运费提成（IT-消费-生产）</td><td>4-0-8</td><td>4-0-8</td><td>4-0-0</td><td>4-0-0</td><td>0</td></tr>
 		<tr><td colspan=6 align=center> 支持的配送类型(DeliveryType) </td></tr>
 
-		<tr><td>[1]农场自提</td><td></td><td></td><td></td><td></td><td></td></tr>
-		<tr><td>[2]集散点自提</td><td></td><td></td><td></td><td></td><td></td></tr>
-		<tr><td>[3]取菜点自提</td><td></td><td></td><td></td><td></td><td></td></tr>
+		<tr><td>[1]农场自提</td><td>是</td><td></td><td></td><td></td><td></td></tr>
+		<tr><td>[2]集散点自提</td><td>是</td><td></td><td></td><td></td><td></td></tr>
+		<tr><td>[3]取菜点自提</td><td>是</td><td></td><td></td><td></td><td></td></tr>
 		<tr><td>[4]其它自提（比如中铁快运仓库自提）</td><td></td><td></td><td></td><td></td><td></td></tr>
 		<tr><td>[11]集散点宅配</td><td></td><td></td><td></td><td></td><td></td></tr>
-		<tr><td>[12]取菜点宅配</td><td></td><td></td><td></td><td></td><td></td></tr>
-		<tr><td>[13]农场宅配 </td><td></td><td></td><td></td><td></td><td></td></tr>
+		<tr><td>[12]取菜点宅配</td><td>是</td><td></td><td></td><td></td><td></td></tr>
+		<tr><td>[13]农场宅配 </td><td>是</td><td></td><td></td><td></td><td></td></tr>
 		<tr><td></td><td></td><td></td><td></td><td></td><td></td></tr>
 		<tr><td></td><td></td><td></td><td></td><td></td><td></td></tr>
 		<tr><td></td><td></td><td></td><td></td><td></td><td></td></tr>
 	</table>
 
 2. 配送类型
-###
+
+###模块划分
+1. DSS管理模块
+	1. 
+	2. 接口：
+		1. 登记承运方：
+			1. 
+			2. 参数：
+				- 类型[1-农场自有，2-集散点自有，3-取菜点自有，4-外部承运方，5-内部承运方]
+				- 相关编号[农场编号、集散点编号、取菜点编号、用户编号]
+				- 名称
+				- OGID：所属运营区域编号
+			3.  
+		2. 登记取菜点：
+			1. 参数：
+				- 拥有者用户编号
+				- 取菜点名称
+				- 描述
+				- 地址编号
+					- 经纬度
+					- 地址名称
+					- 详细地址
+					- 简略地址
+					- 行政区域编号
+					- 邮编
+					- 座机
+					- 手机
+					- 联系人
+					- 备注
+				- 常温首日保管费
+				- 常温续日保管费
+				- 冷藏首日保管费
+				- 冷藏续日保管费
+				- 冷冻首日保管费
+				- 冷冻续日保管费
+				- 开门时间
+				- 关门时间
+				- 是否对所有农场开放
+				- 是否冷藏
+				- 是否冷冻
+			2. 
+		3. 登记集散点： 【TBD】
+		4. DSS登记：
+			1. 参数：
+				- 装货点[类型+编号]
+				- 卸货点[类型+编号]
+				- 承运方
+				- 是否冷藏
+				- 是否冷冻
+				- 是否随时承运
+					- 星期几
+					- 装货时间
+					- 卸货时间
+				- 首重公斤数
+				- 首重运费
+				- 续重公斤运费
+				- 每件包裹运费（？）
+				- 最大载重
+				- 最大包裹数
+				- 最低消费金额
+				- 工单通知模式[固定、调度]
+				- 工单通知类型[短信、email、站内消息、打印机、PDA]
+				- 工单通知参数[手机号、email地址、打印机编号、IMEI号]
+			2. 返回：
+				- DSS编号 or -1(失败) 
+		5. 登记收货地址：
+			1. 参数： 
+		6. 工单查询：直接读数据库
+		6. 查询账务：（或者由统一财务模块提供？）
+			1. 参数：
+				- 查询对象[类型+编号]
+				- 查询月份 
+			2. 返回 
+				- 数据集[] 
+		7. 对账：（或者由统一财务模块提供？）
+			1. 
+2. DS管理模块
+	1. 
+	2. 接口：
+		1. 登记DS组织者：
+			1. 参数： 
+		2. 登记DS：（暂时手工写数据库，稳定后设计接口）
+			1. 参数：
+				- DS组织者编号
+				- 装货点[类型+编号]
+				- 卸货点[类型+编号]
+				- 是否冷藏
+				- 是否冷冻
+				- 简述
+			2. 返回：
+			3.  
+		2. 下达工单：
+			1. 参数：
+				- DS编号
+				- 计划起点装货时间
+				- 计划终点卸货时间
+			2. 返回：
+				- DST编号 or -1（失败） 
+		3. 查询工单
+		4. 查询账务（或者由统一财务模块提供？）
+		5. 对账（或者由统一财务模块提供？） 
+3. 
 
 ###目前的构想  
 1. 干线与宅配衔接
