--- a/物流工作.md
+++ b/物流工作.md
@@ -82,8 +82,8 @@
 				- 是否冷冻
 				- 是否随时承运
 					- 星期几
-					- 装货时间
-					- 卸货时间
+				- 装货时间
+				- 卸货时间
 				- 首重公斤数
 				- 首重运费
 				- 续重公斤运费
@@ -96,8 +96,22 @@
 				- 工单通知参数[手机号、email地址、打印机编号、IMEI号]
 			2. 返回：
 				- DSS编号 or -1(失败) 
-		5. 登记收货地址：
-			1. 参数： 
+		5. 登记地址：
+			1. 参数：
+			 		- 种类[1-farm，2-dp，3-tp，4-消费者住址]
+			 		- 相关编号
+					- 经纬度
+					- 地址名称
+					- 详细地址
+					- 简略地址
+					- 行政区域编号
+					- 邮编
+					- 座机
+					- 手机
+					- 联系人
+					- 备注
+			2. 返回： 
+				- AddressID or -1（失败）
 		6. 工单查询：直接读数据库
 		6. 查询账务：（或者由统一财务模块提供？）
 			1. 参数：
@@ -111,7 +125,13 @@
 	1. 
 	2. 接口：
 		1. 登记DS组织者：
-			1. 参数： 
+			1. 参数：
+				- UID
+				- ARID
+				- 新DS承诺（大字符串，界定覆盖范围、重量体积限制、运输温度、配送时间等）
+				- 新DS报价
+			2. 返回：
+				- DS组织者编号 or -1（失败） 
 		2. 登记DS：（暂时手工写数据库，稳定后设计接口）
 			1. 参数：
 				- DS组织者编号
@@ -120,8 +140,20 @@
 				- 是否冷藏
 				- 是否冷冻
 				- 简述
+				- 是否随时承运
+					- 星期几
+				- 装货时间
+				- 卸货时间
+				- 最小重量
+				- 最少包裹数
+				- 最低消费额
+				- 构成
+					- 种类[Farm，DSS，TP，DP，User]
+					- 编号
+					- 装货时间
+					- 卸货时间 
 			2. 返回：
-			3.  
+				- DSID or -1（失败）  
 		2. 下达工单：
 			1. 参数：
 				- DS编号
@@ -129,6 +161,57 @@
 				- 计划终点卸货时间
 			2. 返回：
 				- DST编号 or -1（失败） 
+			3. 同时创建：
+				1. 装货工单
+					1. 发货方
+						- 运输方
+							- 种类+编号
+							- 姓名
+							- 手机 
+						- 装货时间
+						- 装货清单{包裹编号,...}
+					2. 运输方 
+						- 发货方 
+							- 种类+编号
+							- 姓名
+							- 手机
+						- 装货时间
+						- 装货清单{包裹编号,...}
+				2. 运输工单：
+					- 装货工单{装货时间、包裹数}
+					- 卸货工单{卸货时间、包裹数} 
+				3. 卸货工单
+					1. 收货方
+						- 运输方
+							- 种类+编号
+							- 姓名
+							- 手机 
+						- 卸货时间
+						- 卸货清单{包裹编号,...}
+					2. 运输方 
+						- 收货方 
+							- 种类+编号
+							- 姓名
+							- 手机
+						- 卸货时间
+						- 卸货清单{包裹编号,...}
+
+				4. 保管自提工单 
+					1. 保管方
+						- 自提方
+							- 种类+编号
+							- 姓名
+							- 手机
+						- 包裹编号
+						- 卸货时间
+					2. 自提方
+						- 保管方
+							- 种类+编号
+							- 姓名
+							- 手机
+						- 包裹编号
+						- 卸货时间
+ 
 		3. 查询工单
 		4. 查询账务（或者由统一财务模块提供？）
 		5. 对账（或者由统一财务模块提供？） 
