--- a/物流工作.md
+++ b/物流工作.md
@@ -178,8 +178,8 @@
 						- 装货时间
 						- 装货清单{包裹编号,...}
 				2. 运输工单：
-					- 装货工单{装货时间、包裹数}
-					- 卸货工单{卸货时间、包裹数} 
+					- 装货工单{装货时间、包裹数。详情}
+					- 卸货工单{卸货时间、包裹数。详情} 
 				3. 卸货工单
 					1. 收货方
 						- 运输方
