--- a/物流工作.md
+++ b/物流工作.md
@@ -43,6 +43,7 @@
 				- 相关编号[农场编号、集散点编号、取菜点编号、用户编号]
 				- 名称
 				- OGID：所属运营区域编号
+				- 简介
 			3.  
 		2. 登记取菜点：
 			1. 参数：
@@ -75,6 +76,7 @@
 		3. 登记集散点： 【TBD】
 		4. DSS登记：
 			1. 参数：
+				- 名称
 				- 装货点[类型+编号]
 				- 卸货点[类型+编号]
 				- 承运方
@@ -87,11 +89,9 @@
 				- 首重公斤数
 				- 首重运费
 				- 续重公斤运费
-				- 每件包裹运费（？）
 				- 最大载重
 				- 最大包裹数
 				- 最低消费金额
-				- 工单通知模式[固定、调度]
 				- 工单通知类型[短信、email、站内消息、打印机、PDA]
 				- 工单通知参数[手机号、email地址、打印机编号、IMEI号]
 			2. 返回：
@@ -126,6 +126,7 @@
 	2. 接口：
 		1. 登记DS组织者：
 			1. 参数：
+				- 组织者名称
 				- UID
 				- ARID
 				- 新DS承诺（大字符串，界定覆盖范围、重量体积限制、运输温度、配送时间等）
